--- a/src/main/java/de/bps/olat/modules/cl/_i18n/LocalStrings_de.properties
+++ b/src/main/java/de/bps/olat/modules/cl/_i18n/LocalStrings_de.properties
@@ -16,10 +16,7 @@ cl.table.description = Beschreibung
 cl.table.mode = Modus
 cl.table.delete = -
 cl.table.add = +
-cl.table.run.action = Speichern
-cl.table.empty = Diese Checkliste enth\u00e4lt Checkpoints.
-cl.table.identity = Teilnehmer
-cl.table.manage.edit = Checkpoints bearbeiten
+Von.manage.edit = Checkpoints bearbeiten
 
 cl.table.title.error = Bitte ausf\u00fcllen
 cl.table.description.error = Bitte ausf\u00fcllen
