--- a/src/main/java/org/olat/admin/restapi/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/restapi/_i18n/LocalStrings_zh_CN.properties
@@ -1,10 +1,10 @@
 #Thu Sep 08 16:42:39 CEST 2011
-
+GroupsSiteDef
 
 
 rest.doc=\u6587\u6863
-rest.enabled=\u8BBF\u95EEREST API
-rest.intro=REST API\u80FD\u591F\u4F7FOLAT\u7684\u5404\u79CD\u7279\u6027\u4E0E\u5176\u4ED6\u7684\u7CFB\u7EDF\u76F8\u517C\u5BB9\u3002\u4F8B\u5982\uFF1A\u5B83\u53EF\u4EE5\u7BA1\u7406\u7528\u6237\u3001\u5B66\u4E60\u7FA4\u7EC4\u3001\u5BFC\u5165\u5B66\u7A0B\u6216\u8005\u521B\u5EFA\u76EE\u5F55\u3002
-rest.on=\u5F00\u542F
+rest.enabled=\u8bbf\u95eeREST API
+rest.intro=REST API\u80fd\u591f\u4f7fOLAT\u7684\u5404\u79cd\u7279\u6027\u4e0e\u5176\u4ed6\u7684\u7cfb\u7edf\u76f8\u517c\u5bb9\u3002\u4f8b\u5982\uff1a\u5b83\u53ef\u4ee5\u7ba1\u7406\u7528\u6237\u3001\u5b66\u4e60\u7fa4\u7ec4\u3001\u5bfc\u5165\u5b66\u7a0b\u6216\u8005\u521b\u5efa\u76ee\u5f55\u3002
+rest.on=\u5f00\u542f
 rest.title=REST API
-warn.beta.feature=\u6CE8\u610F\uFF01\u6B64\u529F\u80FD\u76EE\u524D\u6B63\u5728\u6D4B\u8BD5\u4E2D\u3002\u8BF7\u6CE8\u610F\u4F7F\u7528\u65F6\u53EF\u80FD\u4F1A\u4EA7\u751F\u9519\u8BEF\u3002
+warn.beta.feature=\u6ce8\u610f\uff01\u6b64\u529f\u80fd\u76ee\u524d\u6b63\u5728\u6d4b\u8bd5\u4e2d\u3002\u8bf7\u6ce8\u610f\u4f7f\u7528\u65f6\u53ef\u80fd\u4f1a\u4ea7\u751f\u9519\u8bef\u3002
