--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_zh_CN.properties
@@ -1,2 +1,5 @@
 #Tue Oct 11 03:39:14 CEST 2016
-assessmentLock=\u7528\u6237{0}({1})\u6B63\u5728\u88AB\u4FEE\u6539\u8BE5\u9879\u8BC4\u4F30, \u76EE\u6807\u88AB\u9501\u5B9A\u3002\u8BF7\u7A0D\u540E\u518D\u8BD5.
+assessmentLock=\u7528\u6237{0}({1})\u6b63\u5728\u88ab\u4fee\u6539\u8be5\u9879\u8bc4\u4f30, \u76ee\u6807\u88ab\u9501\u5b9a\u3002\u8bf7\u7a0d\u540e\u518d\u8bd5.
+assessment.tool.overview=\u6982\u8ff0
+users=\u7528\u6237
+overview=\u6982\u8ff0
