--- a/src/main/java/org/olat/course/nodes/st/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/st/_i18n/LocalStrings_zh_CN.properties
@@ -1,6 +1,8 @@
 #Wed Jul 28 13:33:30 CEST 2010
-calcedpassed=\u72B6\u6001
-calcedscore=\u6210\u7EE9
+calcedpassed=\u72b6\u6001
+calcedscore=\u6210\u7ee9
+form.delegate=\u6ca1\u6709\u6982\u8ff0\uff0c\u8bf7\u6fc0\u6d3b\u7b2c\u4e00\u4e2a\u53ef\u89c1\u5b50\u8282\u70b9
+pane.tab.highscore=\u9ad8\u5206
 
 
 
@@ -33,51 +35,51 @@ calcedscore=\u6210\u7EE9
 
 
 
-cmd.activate.easyMode=\u663E\u793A\u7B80\u5355\u6A21\u5F0F
-cmd.activate.expertMode=\u663E\u793A\u4E13\u5BB6\u6A21\u5F0F
-condition.accessibility.title=\u8BBF\u95EE
-config.fieldset.view=\u8BF4\u660E
-displayTwoColumns=\u4E24\u5217\u663E\u793A
-easyMode.noAssessableChildren=\u53EA\u80FD\u5305\u542B\u5176\u5B83\u53EF\u8BC4\u4F30\u5143\u7D20 (\u4F8B\u5982\:\u6D4B\u8BD5,\u8BC4\u4F30,\u7ED3\u6784)\u7684\u8BC4\u4F30. \u5728\u4F60\u7684\u5B66\u7A0B\u91CC\u6CA1\u6709\u8FD9\u6837\u7684\u5B66\u7A0B\u5143\u7D20.
-fieldset.chosecreateeditfile=\u9009\u62E9,\u7F16\u8F91\u6216\u521B\u5EFAHTML \u6587\u4EF6
-folder.displayname=\u5B58\u50A8\u5939
-form.expert.error.calc.passed=\u65E0\u6548\u89C4\u5219
-form.expert.error.calc.score=\u65E0\u6548\u89C4\u5219
-form.peekview=\u9884\u89C8\u81EA\u52A8\u751F\u6210\u7684\u6982\u8FF0inc1.
-form.peekview.error.mandatory.child=\u5728\u81EA\u52A8\u751F\u6210\u7684\u6982\u8FF0inc1\u7684\u9884\u89C8\u4E2D\uFF0C\u60A8\u81F3\u5C11\u8981\u9009\u62E9\u4E00\u4E2A\u5B66\u7A0B\u5143\u7D20\u3002
-form.peekview.max.reached=\u5728\u81EA\u52A8\u751F\u6210\u7684\u6982\u8FF0inc1\u7684\u9884\u89C8\u4E2D\uFF0C\u60A8\u5BF9\u4E8E\u5B66\u7A0B\u5143\u7D20{0}\u7684\u9009\u62E9\u5DF2\u5230\u8FBE\u6700\u5927\u9650\u5EA6\u3002
-form.save=\u4FDD\u5B58
-form.self=HTML\u6587\u4EF6
-form.system=\u81EA\u52A8\u6982\u8FF0
+cmd.activate.easyMode=\u663e\u793a\u7b80\u5355\u6a21\u5f0f
+cmd.activate.expertMode=\u663e\u793a\u4e13\u5bb6\u6a21\u5f0f
+condition.accessibility.title=\u8bbf\u95ee
+config.fieldset.view=\u8bf4\u660e
+displayTwoColumns=\u4e24\u5217\u663e\u793a
+easyMode.noAssessableChildren=\u53ea\u80fd\u5305\u542b\u5176\u5b83\u53ef\u8bc4\u4f30\u5143\u7d20 (\u4f8b\u5982\:\u6d4b\u8bd5,\u8bc4\u4f30,\u7ed3\u6784)\u7684\u8bc4\u4f30. \u5728\u4f60\u7684\u5b66\u7a0b\u91cc\u6ca1\u6709\u8fd9\u6837\u7684\u5b66\u7a0b\u5143\u7d20.
+fieldset.chosecreateeditfile=\u9009\u62e9,\u7f16\u8f91\u6216\u521b\u5efaHTML \u6587\u4ef6
+folder.displayname=\u5b58\u50a8\u5939
+form.expert.error.calc.passed=\u65e0\u6548\u89c4\u5219
+form.expert.error.calc.score=\u65e0\u6548\u89c4\u5219
+form.peekview=\u9884\u89c8\u81ea\u52a8\u751f\u6210\u7684\u6982\u8ff0inc1.
+form.peekview.error.mandatory.child=\u5728\u81ea\u52a8\u751f\u6210\u7684\u6982\u8ff0inc1\u7684\u9884\u89c8\u4e2d\uff0c\u60a8\u81f3\u5c11\u8981\u9009\u62e9\u4e00\u4e2a\u5b66\u7a0b\u5143\u7d20\u3002
+form.peekview.max.reached=\u5728\u81ea\u52a8\u751f\u6210\u7684\u6982\u8ff0inc1\u7684\u9884\u89c8\u4e2d\uff0c\u60a8\u5bf9\u4e8e\u5b66\u7a0b\u5143\u7d20{0}\u7684\u9009\u62e9\u5df2\u5230\u8fbe\u6700\u5927\u9650\u5ea6\u3002
+form.save=\u4fdd\u5b58
+form.self=HTML\u6587\u4ef6
+form.system=\u81ea\u52a8\u6982\u8ff0
 
 
-pane.tab.accessibility=\u8BBF\u95EE
-pane.tab.st_config=\u6982\u8FF0
-pane.tab.st_scorecalculation=\u6210\u7EE9
+pane.tab.accessibility=\u8bbf\u95ee
+pane.tab.st_config=\u6982\u8ff0
+pane.tab.st_scorecalculation=\u6210\u7ee9
 pane.tab.deliveryOptions=$org.olat.core.gui.control.generic.iframe\:option.delivery
-passed.no=\u5931\u8D25
-passed.noinfo=\u65E0\u6548
-passed.yes=\u5DF2\u901A\u8FC7
-scform.deletedNode=\u8BFE\u7A0B\u5143\u7D20\u5DF2\u5220\u9664\u6216\u4E0D\u53EF\u8BBF\u95EE, \u8BF7\u53D6\u6D88\u9009\u62E9
-scform.deletedNode.error=\u8BFE\u7A0B\u5143\u7D20\u5DF2\u5220\u9664\u6216\u4E0D\u53EF\u8BBF\u95EE,\u65E0\u6CD5\u9009\u62E9. \u8BF7\u9009\u62E9\u53E6\u4E00\u4E2A.
-scform.error.configuration=\u8BF7\u6CE8\u610F\uFF1A\u4E0B\u9762\u7684\u8003\u8BD5\u4E0E\u8003\u8BD5\u8D44\u6E90\u6CA1\u6709\u8054\u7CFB\u3002
-scform.hasScore=\u8BA1\u7B97\u6210\u7EE9?
-scform.hasScore.yes=\u6839\u636E\u5143\u7D20
-scform.passedCutValue=\u6700\u4F4E\u5206
-scform.passedFactor.error=\u53EA\u5141\u8BB8\u6570\u5B57
-scform.passedNodeIndents=\u901A\u8FC7
-scform.passedNodeIndents.error=\u81F3\u5C11\u9009\u62E9\u4E00\u4E2A\u5143\u7D20
-scform.passedType.error=\u8981\u4F7F\u7528\u6700\u4F4E\u901A\u8FC7\u6210\u7EE9\u5FC5\u987B\u6FC0\u6D3B"\u8BA1\u7B97\u6210\u7EE9"\u9009\u9879.
-scform.passedtype=\u8BA1\u7B97\u901A\u8FC7\u6210\u7EE9?
-scform.passedtype.cutvalue=\u4F5C\u4E3A\u6700\u4F4E\u5206
-scform.passedtype.inherit=\u4ECE\u8BFE\u7A0B\u5143\u7D20\u91CC\u9009\u53D6
-scform.scoreNodeIndents=\u603B\u5206
-scform.scoreNodeIndents.error=\u5FC5\u987B\u9009\u62E9\u81F3\u5C11\u4E00\u4E2A\u5143\u7D20\u7684\u6210\u7EE9\u4F7F\u7528.
-score.fieldset.title=\u7EFC\u5408\u8BC4\u4F30
-score.noinfo=\u4E0D\u53EF\u7528
-score.title=\u6210\u7EE9
-scorecalc.passed=\u5DF2\u901A\u8FC7, \u5982\u679C
-scorecalc.score=\u5904\u7406\u6210\u7EE9
-selectedPeekviewChildren=\u9884\u89C8\u4E2D\u663E\u793A(\u9009\u62E9\u4E0A\u9650\u4E3A{0})
-selectfile=\u9009\u62E9\u8BE5\u6587\u4EF6
-selforsystemoverview=\u4F5C\u4E3A
+passed.no=\u5931\u8d25
+passed.noinfo=\u65e0\u6548
+passed.yes=\u5df2\u901a\u8fc7
+scform.deletedNode=\u8bfe\u7a0b\u5143\u7d20\u5df2\u5220\u9664\u6216\u4e0d\u53ef\u8bbf\u95ee, \u8bf7\u53d6\u6d88\u9009\u62e9
+scform.deletedNode.error=\u8bfe\u7a0b\u5143\u7d20\u5df2\u5220\u9664\u6216\u4e0d\u53ef\u8bbf\u95ee,\u65e0\u6cd5\u9009\u62e9. \u8bf7\u9009\u62e9\u53e6\u4e00\u4e2a.
+scform.error.configuration=\u8bf7\u6ce8\u610f\uff1a\u4e0b\u9762\u7684\u8003\u8bd5\u4e0e\u8003\u8bd5\u8d44\u6e90\u6ca1\u6709\u8054\u7cfb\u3002
+scform.hasScore=\u8ba1\u7b97\u6210\u7ee9?
+scform.hasScore.yes=\u6839\u636e\u5143\u7d20
+scform.passedCutValue=\u6700\u4f4e\u5206
+scform.passedFactor.error=\u53ea\u5141\u8bb8\u6570\u5b57
+scform.passedNodeIndents=\u901a\u8fc7
+scform.passedNodeIndents.error=\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u5143\u7d20
+scform.passedType.error=\u8981\u4f7f\u7528\u6700\u4f4e\u901a\u8fc7\u6210\u7ee9\u5fc5\u987b\u6fc0\u6d3b"\u8ba1\u7b97\u6210\u7ee9"\u9009\u9879.
+scform.passedtype=\u8ba1\u7b97\u901a\u8fc7\u6210\u7ee9?
+scform.passedtype.cutvalue=\u4f5c\u4e3a\u6700\u4f4e\u5206
+scform.passedtype.inherit=\u4ece\u8bfe\u7a0b\u5143\u7d20\u91cc\u9009\u53d6
+scform.scoreNodeIndents=\u603b\u5206
+scform.scoreNodeIndents.error=\u5fc5\u987b\u9009\u62e9\u81f3\u5c11\u4e00\u4e2a\u5143\u7d20\u7684\u6210\u7ee9\u4f7f\u7528.
+score.fieldset.title=\u7efc\u5408\u8bc4\u4f30
+score.noinfo=\u4e0d\u53ef\u7528
+score.title=\u6210\u7ee9
+scorecalc.passed=\u5df2\u901a\u8fc7, \u5982\u679c
+scorecalc.score=\u5904\u7406\u6210\u7ee9
+selectedPeekviewChildren=\u9884\u89c8\u4e2d\u663e\u793a(\u9009\u62e9\u4e0a\u9650\u4e3a{0})
+selectfile=\u9009\u62e9\u8be5\u6587\u4ef6
+selforsystemoverview=\u4f5c\u4e3a
