--- a/src/main/java/org/olat/course/statistic/hourofday/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/statistic/hourofday/_i18n/LocalStrings_zh_CN.properties
@@ -1,12 +1,12 @@
 #Thu Apr 01 18:49:56 CEST 2010
+statistic.intro=\u6b64\u7edf\u8ba1\u6570\u636e\u663e\u793a\u4e86\u57fa\u4e8e\u6bcf\u5c0f\u65f6\u53ef\u7528\u7684\u6574\u4e2a\u8bfe\u7a0b\u6570\u636e\u5bf9\u8bfe\u7a0b\u5143\u7d20\u7684\u6240\u6709\u8bbf\u95ee\u3002
 
 
-
-menu.createstatfile=\u6BCF\u5C0F\u65F6
-menu.createstatfile.alt=\u663E\u793A\u6BCF\u5C0F\u65F6\u7684\u7EDF\u8BA1\u91CF
-stat.table.header.node=\u5B66\u7A0B\u5143\u7D20
-stat.table.header.total=\u603B\u8BA1
-statistic.chart.intro=\u6B64\u56FE\u8868\u663E\u793A\u4E86\u4ECE{1}\u8D77\u7684\u57FA\u4E8E\u6240\u6709\u6709\u6548\u5B66\u7A0B\u6570\u636E\u7684\u8BBF\u95EE\uFF08\u6BCF\u5C0F\u65F6\uFF09\u3002
-statistic.chart.pernode.intro=\u6B64\u56FE\u8868\u663E\u793A\u4E86\u4ECE{0}\u8D77\u7684\u6240\u6709\u8BBF\u95EE\u5B66\u7A0B\u5143\u7D20\u7684\u8BBF\u95EE\u91CF\uFF08\u6BCF\u5C0F\u65F6\uFF09\u3002
-statistic.chart.pernode.total.intro=\u6B64\u56FE\u8868\u663E\u793A\u4E86\u4ECE\u8D77\u7684\u57FA\u4E8E\u6240\u6709\u6709\u6548\u5B66\u7A0B\u6570\u636E\u7684\u8BBF\u95EE\uFF08\u6BCF\u5C0F\u65F6\uFF09\u3002
-statistic.title=\u6BCF\u5C0F\u65F6\u7684\u7EDF\u8BA1
+menu.createstatfile=\u6bcf\u5c0f\u65f6
+menu.createstatfile.alt=\u663e\u793a\u6bcf\u5c0f\u65f6\u7684\u7edf\u8ba1\u91cf
+stat.table.header.node=\u5b66\u7a0b\u5143\u7d20
+stat.table.header.total=\u603b\u8ba1
+statistic.chart.intro=\u6b64\u56fe\u8868\u663e\u793a\u4e86\u4ece{1}\u8d77\u7684\u57fa\u4e8e\u6240\u6709\u6709\u6548\u5b66\u7a0b\u6570\u636e\u7684\u8bbf\u95ee\uff08\u6bcf\u5c0f\u65f6\uff09\u3002
+statistic.chart.pernode.intro=\u6b64\u56fe\u8868\u663e\u793a\u4e86\u4ece{0}\u8d77\u7684\u6240\u6709\u8bbf\u95ee\u5b66\u7a0b\u5143\u7d20\u7684\u8bbf\u95ee\u91cf\uff08\u6bcf\u5c0f\u65f6\uff09\u3002
+statistic.chart.pernode.total.intro=\u6b64\u56fe\u8868\u663e\u793a\u4e86\u4ece\u8d77\u7684\u57fa\u4e8e\u6240\u6709\u6709\u6548\u5b66\u7a0b\u6570\u636e\u7684\u8bbf\u95ee\uff08\u6bcf\u5c0f\u65f6\uff09\u3002
+statistic.title=\u6bcf\u5c0f\u65f6\u7684\u7edf\u8ba1
