--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,5 @@
 #Mon Sep 01 16:46:33 CEST 2014
 admin.menu.title=\u9875\u9762
-admin.menu.title.alt=\u9875\u9762\u914D\u7F6E
-courseSiteForbiddenAlt=\u7981\u6B62\u63A7\u5236
+admin.menu.title.alt=\u9875\u9762\u914d\u7f6e
+courseSiteForbiddenAlt=\u7981\u6b62\u63a7\u5236
+GroupsSiteDef=\u7fa4\u7ec4
