--- a/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/archiver/_i18n/LocalStrings_zh_CN.properties
@@ -1,97 +1,105 @@
 #Tue Oct 11 03:12:57 CEST 2016
-checklist=\u6E05\u5355
-cmd.download=\u4E0B\u8F7D
-cmd.start=\u5F00\u59CB
+menu.surveys=\u8c03\u67e5
+menu.qtitestresults=\u6d4b\u8bd5
+pf=\u53c2\u4e0e\u8005\u6587\u4ef6\u5939
+
+
+checklist=\u6e05\u5355
+cmd.download=\u4e0b\u8f7d
+cmd.start=\u5f00\u59cb
 column.field.missing=-
 column.field.no=\u5426
 column.field.notavailable=n/a
-column.field.yes=\u662F
-column.header.attempts=\u5C1D\u8BD5\u6B21\u6570
+column.field.yes=\u662f
+column.header.attempts=\u5c1d\u8bd5\u6b21\u6570
 column.header.businesspath=URL
-column.header.coachcomment=\u5BF9\u6307\u5BFC\u6559\u5E08\u7684\u8BC4\u8BBA
-column.header.comment=\u5BF9\u7528\u6237\u7684\u8BC4\u8BBA
-column.header.initialLaunchDate=\u8BFE\u7A0B\u521D\u59CB\u5316
-column.header.passed=\u5DF2\u901A\u8FC7
-column.header.score=\u6210\u7EE9
-column.header.scoreLastModified=\u6700\u540E\u66F4\u65B0
-column.header.seqnum=\u53F7\u7801 
-command.change.charset=\u5B57\u7B26\u96C6
-command.closearchiver=\u5173\u95ED
-course.logs.busy=\u4E3A\u672C\u8BFE\u7A0B\u6216\u53E6\u4E00\u4E2A\u8BFE\u7A0B\u751F\u6210\u8BFE\u7A0B\u65E5\u5B50\u6587\u4EF6\u7684\u8FDB\u7A0B\u6B63\u5728\u8FD0\u884C\u3002<p>\u8BF7\u7B49\u5F85\u8BE5\u8FDB\u7A0B\u5B8C\u6210\uFF0C\u60A8\u5C06\u6536\u5230\u4E00\u4E2Ae-mail\u901A\u77E5\uFF0C\u4E4B\u540E\u60A8\u624D\u53EF\u4EE5\u63D0\u4EA4\u65B0\u7684\u8BFE\u7A0B\u65E5\u5FD7\u8BF7\u6C42\u3002
-course.logs.error=\u4F60\u672A\u9009\u62E9\u65E5\u5FD7\u6587\u4EF6
-course.logs.existingarchiveintro=\u5DF2\u5BFC\u51FA\u7684\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6\u88AB\u4FDD\u5B58\u5728\u60A8\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939\uFF0C\u5B83\u4F4D\u4E8E \u4E2A\u4EBA/\u5B58\u6863  \u90E8\u5206\uFF1A
-course.logs.feedback=\u4F60\u53EF\u4EE5\u5728\u4E2A\u4EBA\u7684\u6587\u4EF6\u5939\u7684private/archive/[\u8BFE\u7A0B\u540D\u79F0]\u90E8\u5206\u4E2D\u627E\u5230\u5305\u542B\u8BE5\u8BFE\u7A0B\u65E5\u5FD7\u7684\u538B\u7F29\u6587\u4EF6<b>{0}</b>.
-course.logs.finished=\u60A8\u7684\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6\u5DF2\u6839\u636E\u8981\u6C42\u521B\u5EFA\u3002\u60A8\u53EF\u4EE5\u5728\u60A8\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u627E\u5230\u76F8\u5173\u7684ZIP\u6587\u4EF6\uFF0C\u5B83\u4F4D\u4E8E \u4E2A\u4EBA/\u5B58\u6863/{0}  \u90E8\u5206\uFF1A
-course.logs.intro=\u8BF7\u9009\u62E9\u4E00\u4E2A\u8981\u5F52\u6863\u7684\u65E5\u5FD7\u6587\u4EF6
-course.logs.logdisabled=\u56E0\u4E3A\u5728\u8BFE\u7A0B\u8BBE\u7F6E\u4E2D\u672A\u6FC0\u6D3B\u6570\u636E\u5904\u7406\u8FD9\u4E00\u9879\uFF0C\u6240\u4EE5\u6CA1\u6709\u5F52\u6863\u7684\u65E5\u5FD7\u6587\u4EF6\u3002
-course.logs.noaccess=\u4F60\u6CA1\u6709\u6743\u9650\u5F52\u6863\u65E5\u5FD7\u6587\u4EF6
-course.logs.ongoing=\u6B63\u5728\u6839\u636E\u60A8\u7684\u8BF7\u6C42\u521B\u5EFA\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6\u3002\u6B64\u8FC7\u7A0B\u4F1A\u6301\u7EED\u4E00\u6BB5\u65F6\u95F4\u3002<br><br>\u60A8\u6210\u529F\u521B\u5EFA\u65E5\u5FD7\u6587\u4EF6\u4E4B\u540E\uFF0C\u60A8\u4F1A\u83B7\u5F97\u4E00\u5C01email\u7684\u901A\u77E5
-course.logs.title=\u5B66\u7A0B\u65E5\u5FD7\u6587\u4EF6
-course.res.feedback=\u5728\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u7684private/archive\u4E2D,\u4F60\u53EF\u4EE5\u627E\u5230\u6587\u4EF6<b>{0}</b>\u53CA\u76F8\u5173\u4FE1\u606F\u3002
-course.res.intro=\u70B9\u51FB\u201C\u5F00\u59CB\u201D\u6309\u94AE\u53EF\u4EE5\u5BF9\u6D4B\u8BD5\u3001\u8BC4\u4F30\u548C\u4EFB\u52A1\u7684\u6700\u7EC8\u7ED3\u679C\u8FDB\u884C\u5F52\u6863
-course.res.title=\u8BFE\u7A0B\u7ED3\u679C
-dialog=\u6587\u4EF6\u8BA8\u8BBA
-fo=\u8BBA\u575B
-gta=\u4EFB\u52A1\u548C\u7FA4\u7EC4\u4EFB\u52A1
-index.intro=\u4F60\u53EF\u4EE5\u4F7F\u7528\u8BE5\u5DE5\u5177\u5BF9\u8BFE\u7A0B\u7684\u5404\u9879\u6570\u636E\u8FDB\u884C\u5F52\u6863\u3002<p>\u4ECE\u5DE6\u8FB9\u83DC\u5355\u4E2D\u9009\u62E9\u4E00\u4E2A\u4E3B\u9898\u5F00\u59CB
-index.title=\u6570\u636E\u5F52\u6863\u5DE5\u5177
-logfilechooserform.archive=\u5F52\u6863
-logfilechooserform.begindate=\u4ECE
-logfilechooserform.deletelog=\u5F52\u6863\u540E\u5220\u9664
+column.header.coachcomment=\u5bf9\u6307\u5bfc\u6559\u5e08\u7684\u8bc4\u8bba
+column.header.comment=\u5bf9\u7528\u6237\u7684\u8bc4\u8bba
+column.header.initialLaunchDate=\u8bfe\u7a0b\u521d\u59cb\u5316
+column.header.passed=\u5df2\u901a\u8fc7
+column.header.score=\u6210\u7ee9
+column.header.scoreLastModified=\u6700\u540e\u66f4\u65b0
+column.header.seqnum=\u53f7\u7801 
+command.change.charset=\u5b57\u7b26\u96c6
+command.closearchiver=\u5173\u95ed
+course.logs.busy=\u4e3a\u672c\u8bfe\u7a0b\u6216\u53e6\u4e00\u4e2a\u8bfe\u7a0b\u751f\u6210\u8bfe\u7a0b\u65e5\u5b50\u6587\u4ef6\u7684\u8fdb\u7a0b\u6b63\u5728\u8fd0\u884c\u3002<p>\u8bf7\u7b49\u5f85\u8be5\u8fdb\u7a0b\u5b8c\u6210\uff0c\u60a8\u5c06\u6536\u5230\u4e00\u4e2ae-mail\u901a\u77e5\uff0c\u4e4b\u540e\u60a8\u624d\u53ef\u4ee5\u63d0\u4ea4\u65b0\u7684\u8bfe\u7a0b\u65e5\u5fd7\u8bf7\u6c42\u3002
+course.logs.error=\u4f60\u672a\u9009\u62e9\u65e5\u5fd7\u6587\u4ef6
+course.logs.existingarchiveintro=\u5df2\u5bfc\u51fa\u7684\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6\u88ab\u4fdd\u5b58\u5728\u60a8\u7684\u4e2a\u4eba\u6587\u4ef6\u5939\uff0c\u5b83\u4f4d\u4e8e \u4e2a\u4eba/\u5b58\u6863  \u90e8\u5206\uff1a
+course.logs.feedback=\u4f60\u53ef\u4ee5\u5728\u4e2a\u4eba\u7684\u6587\u4ef6\u5939\u7684private/archive/[\u8bfe\u7a0b\u540d\u79f0]\u90e8\u5206\u4e2d\u627e\u5230\u5305\u542b\u8be5\u8bfe\u7a0b\u65e5\u5fd7\u7684\u538b\u7f29\u6587\u4ef6<b>{0}</b>.
+course.logs.finished=\u60a8\u7684\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6\u5df2\u6839\u636e\u8981\u6c42\u521b\u5efa\u3002\u60a8\u53ef\u4ee5\u5728\u60a8\u7684\u4e2a\u4eba\u6587\u4ef6\u5939\u4e2d\u627e\u5230\u76f8\u5173\u7684ZIP\u6587\u4ef6\uff0c\u5b83\u4f4d\u4e8e \u4e2a\u4eba/\u5b58\u6863/{0}  \u90e8\u5206\uff1a
+course.logs.intro=\u8bf7\u9009\u62e9\u4e00\u4e2a\u8981\u5f52\u6863\u7684\u65e5\u5fd7\u6587\u4ef6
+course.logs.logdisabled=\u56e0\u4e3a\u5728\u8bfe\u7a0b\u8bbe\u7f6e\u4e2d\u672a\u6fc0\u6d3b\u6570\u636e\u5904\u7406\u8fd9\u4e00\u9879\uff0c\u6240\u4ee5\u6ca1\u6709\u5f52\u6863\u7684\u65e5\u5fd7\u6587\u4ef6\u3002
+course.logs.noaccess=\u4f60\u6ca1\u6709\u6743\u9650\u5f52\u6863\u65e5\u5fd7\u6587\u4ef6
+course.logs.ongoing=\u6b63\u5728\u6839\u636e\u60a8\u7684\u8bf7\u6c42\u521b\u5efa\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6\u3002\u6b64\u8fc7\u7a0b\u4f1a\u6301\u7eed\u4e00\u6bb5\u65f6\u95f4\u3002<br><br>\u60a8\u6210\u529f\u521b\u5efa\u65e5\u5fd7\u6587\u4ef6\u4e4b\u540e\uff0c\u60a8\u4f1a\u83b7\u5f97\u4e00\u5c01email\u7684\u901a\u77e5
+course.logs.title=\u5b66\u7a0b\u65e5\u5fd7\u6587\u4ef6
+course.res.feedback=\u5728\u4e2a\u4eba\u6587\u4ef6\u5939\u4e2d\u7684private/archive\u4e2d,\u4f60\u53ef\u4ee5\u627e\u5230\u6587\u4ef6<b>{0}</b>\u53ca\u76f8\u5173\u4fe1\u606f\u3002
+course.res.intro=\u70b9\u51fb\u201c\u5f00\u59cb\u201d\u6309\u94ae\u53ef\u4ee5\u5bf9\u6d4b\u8bd5\u3001\u8bc4\u4f30\u548c\u4efb\u52a1\u7684\u6700\u7ec8\u7ed3\u679c\u8fdb\u884c\u5f52\u6863
+course.res.title=\u8bfe\u7a0b\u7ed3\u679c
+dialog=\u6587\u4ef6\u8ba8\u8bba
+fo=\u8bba\u575b
+gta=\u4efb\u52a1\u548c\u7fa4\u7ec4\u4efb\u52a1
+index.intro=\u4f60\u53ef\u4ee5\u4f7f\u7528\u8be5\u5de5\u5177\u5bf9\u8bfe\u7a0b\u7684\u5404\u9879\u6570\u636e\u8fdb\u884c\u5f52\u6863\u3002<p>\u4ece\u5de6\u8fb9\u83dc\u5355\u4e2d\u9009\u62e9\u4e00\u4e2a\u4e3b\u9898\u5f00\u59cb
+index.title=\u6570\u636e\u5f52\u6863\u5de5\u5177
+logfilechooserform.archive=\u5f52\u6863
+logfilechooserform.begindate=\u4ece
+logfilechooserform.deletelog=\u5f52\u6863\u540e\u5220\u9664
 logfilechooserform.enddate=\u5230
-logfilechooserform.endlessthanbegin=\u8BF7\u9009\u62E9\u4E00\u4E2A\u65E9\u4E8E\u4E0B\u9762\u65F6\u95F4\u7684\u65E5\u671F.
-logfilechooserform.logadmin=\u7BA1\u7406\u5458\u65E5\u5FD7\u6587\u4EF6(\u79C1\u4EBA/\u8BFE\u7A0B\u521B\u5EFA\u4EBA\u7684\u6D3B\u52A8)
-logfilechooserform.logstat=\u7528\u6237\u65E5\u5FD7\u6587\u4EF6(\u533F\u540D/\u7528\u6237\u6D3B\u52A8)
-logfilechooserform.loguser=\u7528\u6237\u65E5\u5FD7\u6587\u4EF6(\u79C1\u4EBA/\u6240\u6709\u7528\u6237\u7684\u8BE6\u7EC6\u6D3B\u52A8)
-menu.archivelogfiles=\u65E5\u5FD7\u6587\u4EF6
-menu.archivelogfiles.alt=\u7BA1\u7406\u5458\u3001\u8BFE\u7A0B\u548C\u7528\u6237\u7684\u65E5\u5FD7\u6587\u4EF6
-menu.checklist=\u6E05\u5355
-menu.dialogs=\u6587\u4EF6\u8BA8\u8BBA
-menu.dialogs.alt=\u5BF9"\u6587\u4EF6\u8BA8\u8BBA"\u8FDB\u884C\u5F52\u6863
-menu.forums=\u8BBA\u575B
-menu.forums.alt=\u5BF9"\u8BBA\u575B"\u8BB0\u5F55\u5F52\u6863
-menu.grouptasks=\u4EFB\u52A1\u548C\u7FA4\u7EC4\u4EFB\u52A1
-menu.grouptasks.alt=\u5BF9\u4EFB\u52A1\u548C\u7FA4\u7EC4\u4EFB\u52A1\u5F52\u6863
-menu.handedintasks=\u63D0\u4EA4\u7BB1
-menu.handedintasks.alt=\u5BF9\u63D0\u4EA4\u7BB1\u8FDB\u884C\u5F52\u6863
-menu.index=\u5F52\u6863
-menu.index.alt=\u5BF9\u8BFE\u7A0B\u7684\u6570\u636E\u8FDB\u884C\u5F52\u6863
-menu.projectbroker=\u9879\u76EE\u7ECF\u7EAA\u4EBA
-menu.projectbroker.alt=\u9879\u76EE\u7ECF\u7EAA\u4EBA\u7684\u5B58\u6863\u6570\u636E
-menu.qtiresults=\u6D4B\u8BD5\u548C\u95EE\u5377
-menu.qtiresults.alt=\u5BF9\u6D4B\u8BD5\u548C\u95EE\u5377\u7684\u6570\u636E\u8FDB\u884C\u5F52\u6863
-menu.scoreaccounting=\u8BFE\u7A0B\u7ED3\u679C
-menu.scoreaccounting.alt=\u5BF9\u6D4B\u8BD5\u3001\u8BC4\u4F30\u548C\u4EFB\u52A1\u7684\u6700\u7EC8\u7ED3\u679C\u8FDB\u884C\u5F52\u6863
-menu.scorm=SCORM \u6210\u7EE9
-menu.scorm.alt=SCORM \u6210\u7EE9
-menu.wikis=Wiki
-menu.wikis.alt=\u5F52\u6863Wikis
-nodechoose.intro.cl=\u8BF7\u9009\u62E9\u8981\u5F52\u6863\u7684\u5143\u7D20\u6E05\u5355
-nodechoose.intro.dialog=\u9009\u62E9\u4E00\u4E2A\u8BFE\u7A0B\u5143\u7D20\u5F52\u6863\u5176\u6587\u4EF6\u8BA8\u8BBA. \u8BE5\u5F52\u6863\u5B58\u653E\u5728\u4F60\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939 private/archive/[course name]/file dialog_[forum_id]\u4E2D.
-nodechoose.intro.fo=\u9009\u62E9\u4E00\u4E2A\u8BFE\u7A0B\u5143\u7D20\u5F52\u6863\u5176\u8BBA\u575B. \u8BE5\u5F52\u6863\u5B58\u653E\u5728\u4F60\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939private/archive/[course name]/forum_[forum_id]\u4E2D. 
-nodechoose.intro.gta=\u8BF7\u9009\u62E9\u8981\u5F52\u6863\u7FA4\u7EC4\u4EFB\u52A1\u7684\u8BFE\u7A0B\u5143\u7D20
-nodechoose.intro.projectbroker=\u8BF7\u9009\u62E9\u4E00\u4E2A\u5B66\u7A0B\u5143\u7D20\u4EE5\u4FDD\u5B58\u5176\u9879\u76EE\u7ECF\u7EAA\u4EBA\u3002\u60A8\u80FD\u591F\u5728\u60A8\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u627E\u5230\u4FDD\u5B58\u7684\u9879\u76EE\u7ECF\u7EAA\u4EBA\uFF0C\u5B83\u4F4D\u4E8E \u4E2A\u4EBA/\u5B58\u6863/[course's name]/projectbroker_[id]
-nodechoose.intro.scorm=\u8BF7\u5728\u4EE5\u4E0B\u5BF9\u8BDD\u6846\u4E2D\u9009\u62E9\u8981\u8BC4\u4EF7\u7684SCORM\u5143\u7D20\u3002\u5B58\u50A8\u7684\u6210\u7EE9\u53EF\u4EE5\u5728\u60A8\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u627E\u5230\uFF0C\u5B83\u4F4D\u4E8E \u4E2A\u4EBA/\u5B58\u50A8/[course name]/[file name]\u3002
-nodechoose.intro.ta=\u9009\u62E9\u4E00\u4E2A\u8BFE\u7A0B\u5143\u7D20\u5F52\u6863\u5176tasks/solutions. \u8BE5\u5F52\u6863\u5B58\u653E\u5728\u4F60\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939n private/archive/[course name]/task_[name of course element]\u4E2D.
-nodechoose.intro.wiki=\u9009\u62E9\u4E00\u4E2A\u8BFE\u7A0B\u5143\u7D20\u5F52\u6863\u5176wiki. \u8BE5\u5F52\u6863\u5B58\u653E\u5728\u4F60\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939  private/archive/[course name]/wiki_[date] \u4E2D.
-overview.nonodes.checklist=\u672C\u8BFE\u7A0B\u6CA1\u6709\u4EFB\u4F55\u6E05\u5355
-overview.nonodes.dialog=\u8BE5\u8BFE\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55\u6587\u4EF6\u8BA8\u8BBA
-overview.nonodes.fo=\u8BE5\u8BFE\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55\u8BBA\u575B
-overview.nonodes.gta=\u8BE5\u8BFE\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55\u8BBA\u575B
-overview.nonodes.projectbroker=\u672C\u5B66\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55\u9879\u76EE\u7ECF\u7EAA\u4EBA\u3002
-overview.nonodes.scorm=\u672C\u5B66\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55SCORM\u5143\u7D20\u3002
-overview.nonodes.ta=\u8BE5\u8BFE\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55\u4EFB\u52A1\u5143\u7D20
-overview.nonodes.wiki=\u8BE5\u8BFE\u7A0B\u4E0D\u5305\u542B\u4EFB\u4F55wiki
-projectbroker=\u9879\u76EE\u7ECF\u7EAA\u4EBA
-readme=\u63D0\u793A\n\n\u4F5C\u4E3A\u4E00\u4E2A\u5F52\u6863\u6570\u636E\u7684\u63A5\u53D7\u8005\uFF0C\u4F60\u5FC5\u987B\u786E\u4FDD\u8BE5\u6570\u636E\u53EA\u6709\u5728\u88AB\u6388\u6743\u7684\u60C5\u51B5\u4E0B\u624D\u88AB\u4F7F\u7528\u3002n \n \n- \u8DDF\u5927\u5B66\u95EE\u9898\u6709\u5173\u7684\u4E2A\u4EBA\u6570\u636E\u53EF\u7528\u4E8E\u7814\u7A76\uFF0C\u6559\u5B66\u548C\u8BC4\u4F30\u3002\n \n- \u533F\u540D\u6570\u636E\u4E5F\u53EF\u7528\u4E8E\u6570\u636E\u7EDF\u8BA1\u3002n \n- \u53EA\u8981\u6709\u5FC5\u8981\uFF0C\u8FD8\u53EF\u4EE5\u5F52\u6863\u4E2A\u4EBA\u6570\u636E\u3002\n \n-  \u4E0D\u5FC5\u8981\u7684\u6570\u636E\u5FC5\u987B\u5220\u9664\u3002
+logfilechooserform.endlessthanbegin=\u8bf7\u9009\u62e9\u4e00\u4e2a\u65e9\u4e8e\u4e0b\u9762\u65f6\u95f4\u7684\u65e5\u671f.
+logfilechooserform.logadmin=\u7ba1\u7406\u5458\u65e5\u5fd7\u6587\u4ef6(\u79c1\u4eba/\u8bfe\u7a0b\u521b\u5efa\u4eba\u7684\u6d3b\u52a8)
+logfilechooserform.logstat=\u7528\u6237\u65e5\u5fd7\u6587\u4ef6(\u533f\u540d/\u7528\u6237\u6d3b\u52a8)
+logfilechooserform.loguser=\u7528\u6237\u65e5\u5fd7\u6587\u4ef6(\u79c1\u4eba/\u6240\u6709\u7528\u6237\u7684\u8be6\u7ec6\u6d3b\u52a8)
+menu.archivelogfiles=\u65e5\u5fd7\u6587\u4ef6
+menu.archivelogfiles.alt=\u7ba1\u7406\u5458\u3001\u8bfe\u7a0b\u548c\u7528\u6237\u7684\u65e5\u5fd7\u6587\u4ef6
+menu.checklist=\u6e05\u5355
+menu.dialogs=\u6587\u4ef6\u8ba8\u8bba
+menu.dialogs.alt=\u5bf9"\u6587\u4ef6\u8ba8\u8bba"\u8fdb\u884c\u5f52\u6863
+menu.forums=\u8bba\u575b
+menu.forums.alt=\u5bf9"\u8bba\u575b"\u8bb0\u5f55\u5f52\u6863
+menu.grouptasks=\u4efb\u52a1\u548c\u7fa4\u7ec4\u4efb\u52a1
+menu.grouptasks.alt=\u5bf9\u4efb\u52a1\u548c\u7fa4\u7ec4\u4efb\u52a1\u5f52\u6863
+menu.handedintasks=\u63d0\u4ea4\u7bb1
+menu.handedintasks.alt=\u5bf9\u63d0\u4ea4\u7bb1\u8fdb\u884c\u5f52\u6863
+menu.index=\u5f52\u6863
+menu.index.alt=\u5bf9\u8bfe\u7a0b\u7684\u6570\u636e\u8fdb\u884c\u5f52\u6863
+menu.projectbroker=\u9879\u76ee\u7ecf\u7eaa\u4eba
+menu.projectbroker.alt=\u9879\u76ee\u7ecf\u7eaa\u4eba\u7684\u5b58\u6863\u6570\u636e
+menu.qtiresults=\u6d4b\u8bd5\u548c\u95ee\u5377
+menu.qtiresults.alt=\u5bf9\u6d4b\u8bd5\u548c\u95ee\u5377\u7684\u6570\u636e\u8fdb\u884c\u5f52\u6863
+menu.scoreaccounting=\u8bfe\u7a0b\u7ed3\u679c
+menu.scoreaccounting.alt=\u5bf9\u6d4b\u8bd5\u3001\u8bc4\u4f30\u548c\u4efb\u52a1\u7684\u6700\u7ec8\u7ed3\u679c\u8fdb\u884c\u5f52\u6863
+menu.scorm=SCORM \u6210\u7ee9
+menu.scorm.alt=SCORM \u6210\u7ee9
+menu.wikis=\u7ef4\u57fa
+menu.participantfolder=\u53c2\u4e0e\u8005\u6587\u4ef6\u5939
+menu.participantfolder.alt=\u53c2\u4e0e\u8005\u6587\u4ef6\u5939
+overview.nonodes.pf=\u672c\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u53c2\u4e0e\u8005\u6587\u4ef6\u5939\u3002
+menu.wikis.alt=\u5f52\u6863Wikis
+nodechoose.intro.cl=\u8bf7\u9009\u62e9\u8981\u5f52\u6863\u7684\u5143\u7d20\u6e05\u5355
+nodechoose.intro.dialog=\u9009\u62e9\u4e00\u4e2a\u8bfe\u7a0b\u5143\u7d20\u5f52\u6863\u5176\u6587\u4ef6\u8ba8\u8bba. \u8be5\u5f52\u6863\u5b58\u653e\u5728\u4f60\u7684\u4e2a\u4eba\u6587\u4ef6\u5939 private/archive/[course name]/file dialog_[forum_id]\u4e2d.
+nodechoose.intro.fo=\u9009\u62e9\u4e00\u4e2a\u8bfe\u7a0b\u5143\u7d20\u5f52\u6863\u5176\u8bba\u575b. \u8be5\u5f52\u6863\u5b58\u653e\u5728\u4f60\u7684\u4e2a\u4eba\u6587\u4ef6\u5939private/archive/[course name]/forum_[forum_id]\u4e2d. 
+nodechoose.intro.gta=\u8bf7\u9009\u62e9\u8981\u5f52\u6863\u7fa4\u7ec4\u4efb\u52a1\u7684\u8bfe\u7a0b\u5143\u7d20
+nodechoose.intro.projectbroker=\u8bf7\u9009\u62e9\u4e00\u4e2a\u5b66\u7a0b\u5143\u7d20\u4ee5\u4fdd\u5b58\u5176\u9879\u76ee\u7ecf\u7eaa\u4eba\u3002\u60a8\u80fd\u591f\u5728\u60a8\u7684\u4e2a\u4eba\u6587\u4ef6\u5939\u4e2d\u627e\u5230\u4fdd\u5b58\u7684\u9879\u76ee\u7ecf\u7eaa\u4eba\uff0c\u5b83\u4f4d\u4e8e \u4e2a\u4eba/\u5b58\u6863/[course's name]/projectbroker_[id]
+nodechoose.intro.scorm=\u8bf7\u5728\u4ee5\u4e0b\u5bf9\u8bdd\u6846\u4e2d\u9009\u62e9\u8981\u8bc4\u4ef7\u7684SCORM\u5143\u7d20\u3002\u5b58\u50a8\u7684\u6210\u7ee9\u53ef\u4ee5\u5728\u60a8\u7684\u4e2a\u4eba\u6587\u4ef6\u5939\u4e2d\u627e\u5230\uff0c\u5b83\u4f4d\u4e8e \u4e2a\u4eba/\u5b58\u50a8/[course name]/[file name]\u3002
+nodechoose.intro.ta=\u9009\u62e9\u4e00\u4e2a\u8bfe\u7a0b\u5143\u7d20\u5f52\u6863\u5176tasks/solutions. \u8be5\u5f52\u6863\u5b58\u653e\u5728\u4f60\u7684\u4e2a\u4eba\u6587\u4ef6\u5939n private/archive/[course name]/task_[name of course element]\u4e2d.
+nodechoose.intro.wiki=\u9009\u62e9\u4e00\u4e2a\u8bfe\u7a0b\u5143\u7d20\u5f52\u6863\u5176wiki. \u8be5\u5f52\u6863\u5b58\u653e\u5728\u4f60\u7684\u4e2a\u4eba\u6587\u4ef6\u5939  private/archive/[course name]/wiki_[date] \u4e2d.
+overview.nonodes.checklist=\u672c\u8bfe\u7a0b\u6ca1\u6709\u4efb\u4f55\u6e05\u5355
+overview.nonodes.dialog=\u8be5\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u6587\u4ef6\u8ba8\u8bba
+overview.nonodes.fo=\u8be5\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u8bba\u575b
+overview.nonodes.gta=\u8be5\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u8bba\u575b
+overview.nonodes.projectbroker=\u672c\u5b66\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u9879\u76ee\u7ecf\u7eaa\u4eba\u3002
+overview.nonodes.scorm=\u672c\u5b66\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55SCORM\u5143\u7d20\u3002
+overview.nonodes.ta=\u8be5\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55\u4efb\u52a1\u5143\u7d20
+overview.nonodes.wiki=\u8be5\u8bfe\u7a0b\u4e0d\u5305\u542b\u4efb\u4f55wiki
+projectbroker=\u9879\u76ee\u7ecf\u7eaa\u4eba
+readme=\u63d0\u793a\n\n\u4f5c\u4e3a\u4e00\u4e2a\u5f52\u6863\u6570\u636e\u7684\u63a5\u53d7\u8005\uff0c\u4f60\u5fc5\u987b\u786e\u4fdd\u8be5\u6570\u636e\u53ea\u6709\u5728\u88ab\u6388\u6743\u7684\u60c5\u51b5\u4e0b\u624d\u88ab\u4f7f\u7528\u3002n \n \n- \u8ddf\u5927\u5b66\u95ee\u9898\u6709\u5173\u7684\u4e2a\u4eba\u6570\u636e\u53ef\u7528\u4e8e\u7814\u7a76\uff0c\u6559\u5b66\u548c\u8bc4\u4f30\u3002\n \n- \u533f\u540d\u6570\u636e\u4e5f\u53ef\u7528\u4e8e\u6570\u636e\u7edf\u8ba1\u3002n \n- \u53ea\u8981\u6709\u5fc5\u8981\uff0c\u8fd8\u53ef\u4ee5\u5f52\u6863\u4e2a\u4eba\u6570\u636e\u3002\n \n-  \u4e0d\u5fc5\u8981\u7684\u6570\u636e\u5fc5\u987b\u5220\u9664\u3002
 scorm=SCORM
-select.group=\u9009\u62E9\u7FA4\u7EC4
-select.group.all=\u6240\u6709\u5B66\u4E60\u8005
-select.group.desc=\u5982\u679C\u4F60\u613F\u610F\uFF0C\u4F60\u53EF\u4EE5\u9650\u5236\u4E00\u4E2A\u7279\u5B9A\u7684\u7FA4\u7EC4\u4E0B\u8F7D\u3002
-showfile=\u663E\u793A\u6587\u4EF6
+select.group=\u9009\u62e9\u7fa4\u7ec4
+select.group.all=\u6240\u6709\u5b66\u4e60\u8005
+select.group.desc=\u5982\u679c\u4f60\u613f\u610f\uff0c\u4f60\u53ef\u4ee5\u9650\u5236\u4e00\u4e2a\u7279\u5b9a\u7684\u7fa4\u7ec4\u4e0b\u8f7d\u3002
+showfile=\u663e\u793a\u6587\u4ef6
 ta=Tasks/solutions
-table.action.download=\u4E0B\u8F7D
-table.action.select=\u9009\u62E9
-table.header.node=\u8BFE\u7A0B\u5143\u7D20
-tool.name=\u5F52\u6863\u5DE5\u5177
+table.action.download=\u4e0b\u8f7d
+table.action.select=\u9009\u62e9
+table.header.node=\u8bfe\u7a0b\u5143\u7d20
+tool.name=\u5f52\u6863\u5de5\u5177
 wiki=Wiki
