--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_zh_CN.properties
@@ -1,8 +1,14 @@
 #Tue Mar 02 06:29:54 CET 2010
-bgr.archive=\u5F52\u6863\u5DE5\u5177
-bgr.assess=\u8BC4\u4F30\u5DE5\u5177
-bgr.editor=\u8BFE\u7A0B\u7F16\u8F91\u5668
-bgr.glossary=\u8BCD\u6C47\u8868\u5DE5\u5177
-bgr.groupmngt=\u7FA4\u7EC4\u7BA1\u7406
-bgr.statistics=\u7EDF\u8BA1\u6570\u636E
-noRestriction=\u65E0\u7EA6\u675F
+table.header.groups=\u7fa4\u7ec4
+table.header.role=\u89d2\u8272
+bgr.membermngt=\u6210\u5458\u7ba1\u7406
+bgr.assessmode=\u8bc4\u4f30\u6a21\u5f0f
+bgr.dbs=\u8bfe\u7a0b\u6570\u636e\u5e93
+
+bgr.archive=\u5f52\u6863\u5de5\u5177
+bgr.assess=\u8bc4\u4f30\u5de5\u5177
+bgr.editor=\u8bfe\u7a0b\u7f16\u8f91\u5668
+bgr.glossary=\u8bcd\u6c47\u8868\u5de5\u5177
+bgr.groupmngt=\u7fa4\u7ec4\u7ba1\u7406
+bgr.statistics=\u7edf\u8ba1\u6570\u636e
+noRestriction=\u65e0\u7ea6\u675f
