--- a/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
@@ -1,51 +1,62 @@
 #Thu Oct 16 09:10:54 CEST 2014
+members.all=\u5168\u90e8
+menu.groups=\u7fa4\u7ec4
+menu.groups.alt=\u7fa4\u7ec4\u7ba1\u7406
+group.create=\u521b\u5efa\u7fa4\u7ec4
+select.group=\u6dfb\u52a0\u7fa4\u7ec4
+group.add=\u6dfb\u52a0\u7fa4\u7ec4
+import.member=\u5bfc\u5165\u6210\u5458
+add.member=\u6dfb\u52a0\u6210\u5458
+dedup.members=\u6e05\u7406\u6210\u5458
+search.curriculum=\u4ec5\u9650\u8bfe\u7a0b\u6210\u5458only curriculum members 
+
 menu.members=\u6210\u5458
-menu.orders=\u9884\u8BA2
+menu.orders=\u9884\u8ba2
 menu.rights=\u6743\u5229
 menu.rights.alt=\u6743\u9650
-nomembers=\u6CA1\u6709\u627E\u5230\u4E0E\u60A8\u7684\u6807\u51C6\u5339\u914D\u7684\u6210\u5458\u3002
+nomembers=\u6ca1\u6709\u627e\u5230\u4e0e\u60a8\u7684\u6807\u51c6\u5339\u914d\u7684\u6210\u5458\u3002
 owners=\u6240\u6709\u8005
-owners.infos=\u6240\u6709\u8005\u6709\u5BF9\u8BFE\u7A0B\u7684\u4F5C\u8005\u548C\u7BA1\u7406\u8005\u6743\u9650\u3002
-participants=\u53C2\u4E0E\u8005
-participants.infos=\u53C2\u4E0E\u8005\u6709\u8FDB\u5165\u8BFE\u7A0B\u7684\u6743\u9650\u3002<br/> \u7FA4\u7EC4\u53C2\u4E0E\u8005\u6709\u8FDB\u5165\u8BFE\u7A0B\u548C\u7FA4\u7EC4\u7684\u6743\u9650\u3002
-role.group.participant=\u7FA4\u7EC4\u53C2\u4E0E\u8005
-role.group.tutor=\u7FA4\u7EC4\u8F85\u5BFC\u5458
-role.group.waiting=\u7B49\u5F85\u5217\u8868
+owners.infos=\u6240\u6709\u8005\u6709\u5bf9\u8bfe\u7a0b\u7684\u4f5c\u8005\u548c\u7ba1\u7406\u8005\u6743\u9650\u3002
+participants=\u53c2\u4e0e\u8005
+participants.infos=\u53c2\u4e0e\u8005\u6709\u8fdb\u5165\u8bfe\u7a0b\u7684\u6743\u9650\u3002<br/> \u7fa4\u7ec4\u53c2\u4e0e\u8005\u6709\u8fdb\u5165\u8bfe\u7a0b\u548c\u7fa4\u7ec4\u7684\u6743\u9650\u3002
+role.group.participant=\u7fa4\u7ec4\u53c2\u4e0e\u8005
+role.group.tutor=\u7fa4\u7ec4\u8f85\u5bfc\u5458
+role.group.waiting=\u7b49\u5f85\u5217\u8868
 role.repo.owner=\u6240\u6709\u8005
-role.repo.participant=\u53C2\u4E0E\u8005
-role.repo.tutor=\u8F85\u5BFC\u5458
-search=\u68C0\u7D22
+role.repo.participant=\u53c2\u4e0e\u8005
+role.repo.tutor=\u8f85\u5bfc\u5458
+search=\u68c0\u7d22
 search.all=\u6240\u6709\u6210\u5458
 search.participant=$\:role.repo.participant
-search.businessGroup=\u4EC5\u9650\u7FA4\u7EC4\u6210\u5458
-search.login=\u7528\u6237\u540D\u79F0
-search.origin=\u7C4D\u8D2F
-search.origin.alt=\u901A\u544A
+search.businessGroup=\u4ec5\u9650\u7fa4\u7ec4\u6210\u5458
+search.login=\u7528\u6237\u540d\u79f0
+search.origin=\u7c4d\u8d2f
+search.origin.alt=\u901a\u544a
 search.owner=$\:role.repo.owner
-search.repositoryEntry=\u4EC5\u9650\u8BFE\u7A0B\u6210\u5458
-search.roles=\u89D2\u8272
+search.repositoryEntry=\u4ec5\u9650\u8bfe\u7a0b\u6210\u5458
+search.roles=\u89d2\u8272
 search.coach=$\:role.repo.tutor
 search.waiting=$\:role.group.waiting
-select.group=\u6DFB\u52A0\u7FA4\u7EC4
+select.group=\u6dfb\u52a0\u7fa4\u7ec4
 table.header.edit=\u5904\u7406
-table.header.firstName=\u540D
-table.header.firstTime=\u52A0\u5165
-table.header.freePlace=\u81EA\u7531
+table.header.firstName=\u540d
+table.header.firstTime=\u52a0\u5165
+table.header.freePlace=\u81ea\u7531
 table.header.graduate=$org.olat.group.ui.main\:table.header.graduate
-table.header.groups=\u7FA4\u5219
-table.header.lastName=\u59D3
-table.header.lastTime=\u4E0A\u6B21\u8BBF\u95EE
+table.header.groups=\u7fa4\u5219
+table.header.lastName=\u59d3
+table.header.lastTime=\u4e0a\u6b21\u8bbf\u95ee
 table.header.login=$org.olat.group.ui.main\:table.header.login
-table.header.mail=\u7535\u5B50\u90AE\u4EF6
+table.header.mail=\u7535\u5b50\u90ae\u4ef6
 table.header.online=$org.olat.group.ui.main\:table.header.online
-table.header.participants=\u53C2\u4E0E\u8005
+table.header.participants=\u53c2\u4e0e\u8005
 table.header.participantsCount=\u5360\u7528
 table.header.remove=\u5220\u9664
-table.header.role=\u89D2\u8272
-table.header.tutors=\u8F85\u5BFC\u8005
-table.header.waitingList=\u7B49\u5F85\u5217\u8868
-tutors=\u8F85\u5BFC\u8005
-tutors.infos=\u8F85\u5BFC\u8005\u6709\u4F7F\u7528\u57F9\u8BAD\u548C\u8BC4\u4EF7\u8BFE\u7A0B\u53C2\u4E0E\u8005\u7684\u5DE5\u5177\u7684\u6743\u9650\u3002<br/>\u7FA4\u7EC4\u8F85\u5BFC\u8005\u6709\u4F7F\u7528\u57F9\u8BAD\u548C\u8BC4\u4EF7\u4ED6\u4EEC\u7FA4\u7EC4\u53C2\u4E0E\u8005\u7684\u5DE5\u5177\u7684\u6743\u9650\u3002
+table.header.role=\u89d2\u8272
+table.header.tutors=\u8f85\u5bfc\u8005
+table.header.waitingList=\u7b49\u5f85\u5217\u8868
+tutors=\u8f85\u5bfc\u8005
+tutors.infos=\u8f85\u5bfc\u8005\u6709\u4f7f\u7528\u57f9\u8bad\u548c\u8bc4\u4ef7\u8bfe\u7a0b\u53c2\u4e0e\u8005\u7684\u5de5\u5177\u7684\u6743\u9650\u3002<br/>\u7fa4\u7ec4\u8f85\u5bfc\u8005\u6709\u4f7f\u7528\u57f9\u8bad\u548c\u8bc4\u4ef7\u4ed6\u4eec\u7fa4\u7ec4\u53c2\u4e0e\u8005\u7684\u5de5\u5177\u7684\u6743\u9650\u3002
 user.notfound=$org.olat.group.ui.main\:user.notfound
-waiting.infos=\u7FA4\u7EC4\u7B49\u5F85\u5217\u8868\u4E2D\u7684\u4EBA\u5458\u6CA1\u6709\u8FDB\u5165\u8BFE\u7A0B\u548C\u7FA4\u7EC4\u7684\u6743\u9650\u3002\u5F53\u6709\u8DB3\u591F\u7684\u5750\u5E2D\u6216\u8005\u4EBA\u5458\u88AB\u91CD\u65B0\u5206\u914D\u540E\u6743\u9650\u624D\u5F00\u653E\u3002
-waitinglist=\u7B49\u5F85\u5217\u8868
+waiting.infos=\u7fa4\u7ec4\u7b49\u5f85\u5217\u8868\u4e2d\u7684\u4eba\u5458\u6ca1\u6709\u8fdb\u5165\u8bfe\u7a0b\u548c\u7fa4\u7ec4\u7684\u6743\u9650\u3002\u5f53\u6709\u8db3\u591f\u7684\u5750\u5e2d\u6216\u8005\u4eba\u5458\u88ab\u91cd\u65b0\u5206\u914d\u540e\u6743\u9650\u624d\u5f00\u653e\u3002
+waitinglist=\u7b49\u5f85\u5217\u8868
