--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,21 @@
 #Sun Mar 19 10:15:41 CET 2017
+read.only.header=\u7ed3\u675f\u8bfe\u7a0b
+details.delete.acknowledge=\u786e\u8ba4
+details.read.only.acknowledge=\u786e\u8ba4
+details.delete.acknowledge.error=\u8bf7\u786e\u8ba4
+details.read.only.acknowledge.error=\u8bf7\u786e\u8ba4
+
+details.read.only.acknowledge.msg=\u6240\u6709\u8bfe\u7a0b\u8981\u7d20\u5305\u62ec\u6d4b\u8bd5\u2026\u5c06\u5904\u4e8e\u53ea\u8bfb\u6a21\u5f0f\uff0c\u4e0d\u80fd\u518d\u7f16\u8f91\u3002
+
+
+dialog.confirm.close=\u4f60\u771f\u7684\u60f3\u5b8c\u6210\u8fd9\u4e2a\u5b66\u4e60\u8d44\u6e90\u5417?\u5b83\u6709<strong>{0} members</strong> \u53ef\u80fd\u6b63\u5728\u4f7f\u7528\u5b83\u3002
+
+details.close.ressoure.desc=\u4f7f\u7528\u8fd9\u79cd\u65b9\u6cd5\uff0c\u5b66\u4e60\u8d44\u6e90\u5c31\u53d8\u6210\u4e86\u201c\u5b8c\u6210\u201d\u72b6\u6001\u3002
+details.close.ressoure.desc.1=\u8bfe\u7a0b\u4ecd\u7136\u5b58\u5728\uff0c\u5305\u62ec\u7528\u6237\u6570\u636e\u3002
+details.close.ressoure.desc.2=\u6240\u6709\u8bfe\u7a0b\u6210\u5458\u4ecd\u7136\u53ef\u4ee5\u8bbf\u95ee\u8be5\u8bfe\u7a0b\u3002
+details.close.ressoure.desc.3=\u672c\u8bfe\u7a0b\u4e3a\u53ea\u8bfb\u6a21\u5f0f\u3002
+
+
 
 cif.dates.public=\u5b66\u671f
 table.header.lifecycle.label=\u5b66\u671f
@@ -295,6 +312,8 @@ cmd.cancel=\u53d6\u6d88
 cmd.close=\u5173\u95ed
 cmd.create.ressource=\u521b\u5efa
 cmd.delete=\u5220\u9664
+details.closed=\u7ed3\u675f
+cif.groups=\u7fa4\u7ec4
 cmd.finish=\u5b8c\u6210\u5411\u5bfc
 cmd.forward=\u7ee7\u7eed
 cmd.import.ressource=\u5bfc\u5165
