--- a/src/main/java/org/olat/admin/landingpages/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/landingpages/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,31 +1,32 @@
 #Thu Nov 20 00:40:26 CET 2014
-add=\u6DFB\u52A0
+roles.learnresourcemanagers=\u5b66\u4e60\u8d44\u6e90\u7ecf\u7406
+add=\u6dfb\u52a0
 roles.authors=$org.olat.admin.user\:rightsForm.isAuthor
 delete=\u5220\u9664
-down=\u5411\u4E0B
+down=\u5411\u4e0b
 roles.groupmanagers=$org.olat.admin.user\:rightsForm.isGroupmanager
 roles.learnresourcemanagers=$org.olat.admin.user\:rightsForm.isInstitutionalResourceManager
 landingpages.title=\u9996\u9875
 none=-
 roles.administrators=$org.olat.admin.user\:rightsForm.isAdmin
-page.catalog=\u76EE\u5F55\uFF08\u4EC5\u4F5C\u4E3A\u72EC\u7ACB\u533A\u57DF\u53EF\u7528\uFF09
-page.coursesCatalog=\u8BFE\u7A0B\u533A\u57DF\u7684\u76EE\u5F55
-page.groups=\u7FA4\u7EC4\u533A\u57DF
-page.infoPage1=\u8BFE\u7A0B\u4ECB\u7ECD 1
-page.infoPage2=\u8BFE\u7A0B\u4ECB\u7ECD 2
-page.learnResources=\u4F5C\u8005\u533A\u57DF
-page.myCourses=\u8BFE\u7A0B\u533A\u57DF\u4E2D\u7684\u6211\u7684\u8BFE\u7A0B
-page.myFavoritCourses=\u8BFE\u7A0B\u533A\u57DF\u559C\u597D
-page.myFavoritGroups=\u7FA4\u7EC4\u533A\u57DF\u559C\u597D
-page.myNotifications=\u6211\u7684\u8BA2\u9605
+page.catalog=\u76ee\u5f55\uff08\u4ec5\u4f5c\u4e3a\u72ec\u7acb\u533a\u57df\u53ef\u7528\uff09
+page.coursesCatalog=\u8bfe\u7a0b\u533a\u57df\u7684\u76ee\u5f55
+page.groups=\u7fa4\u7ec4\u533a\u57df
+page.infoPage1=\u8bfe\u7a0b\u4ecb\u7ecd 1
+page.infoPage2=\u8bfe\u7a0b\u4ecb\u7ecd 2
+page.learnResources=\u4f5c\u8005\u533a\u57df
+page.myCourses=\u8bfe\u7a0b\u533a\u57df\u4e2d\u7684\u6211\u7684\u8bfe\u7a0b
+page.myFavoritCourses=\u8bfe\u7a0b\u533a\u57df\u559c\u597d
+page.myFavoritGroups=\u7fa4\u7ec4\u533a\u57df\u559c\u597d
+page.myNotifications=\u6211\u7684\u8ba2\u9605
 page.myPortfolio=\u6211\u7684e-Portfolio
-page.portal=\u95E8\u6237\uFF08\u4EC5\u4F5C\u4E3A\u72EC\u7ACB\u533A\u57DF\u53EF\u7528\uFF09
+page.portal=\u95e8\u6237\uff08\u4ec5\u4f5c\u4e3a\u72ec\u7acb\u533a\u57df\u53ef\u7528\uff09
 roles.poolmanagers=$org.olat.admin.user\:rightsForm.isPoolmanager
 rules.landing.page=\u9996\u9875
-rules.landing.page.chooser=\u9009\u62E9
-rules.position=\u4F4D\u7F6E
-rules.role=\u89D2\u8272
-rules.user.attribute.key=\u7528\u6237\u5C5E\u6027
-rules.user.attribute.value=\u503C
-up=\u9AD8
+rules.landing.page.chooser=\u9009\u62e9
+rules.position=\u4f4d\u7f6e
+rules.role=\u89d2\u8272
+rules.user.attribute.key=\u7528\u6237\u5c5e\u6027
+rules.user.attribute.value=\u503c
+up=\u9ad8
 roles.usermanagers=$org.olat.admin.user\:rightsForm.isUsermanager
