--- a/src/main/java/org/olat/admin/user/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/user/_i18n/LocalStrings_en.properties
@@ -137,6 +137,7 @@ search.form.constraint.auth.none=No authentication
 search.form.constraint.author=Author
 search.form.constraint.curriculummanager=Curriculum manager
 search.form.constraint.groupmanager=Group manager
+search.form.constraint.principal=$\:role.principal
 search.form.constraint.guest=$\:role.guest
 search.form.constraint.invitee=$\:role.invitee
 search.form.constraint.learnresourcemanager=$\:role.learnresourcemanager
