--- a/src/main/java/org/olat/core/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,5 @@
 #Wed Sep 26 11:47:44 CEST 2018
+toolbox.tools=\u7ba1\u7406
 form.dirty.title=\u672a\u4fdd\u5b58\u7684\u8868\u5355\u6570\u636e
 form.dirty.intro=\u6ce8\u610f\ !\u60a8\u8fd8\u6ca1\u6709\u4fdd\u5b58\u6b64\u8868\u5355
 form.dirty.back=\u901a\u8fc7\u5355\u51fb<strong>$\:form.dirty.button</strong> \u53ef\u4ee5\u8fd4\u56de\u5230\u53ef\u4ee5\u4fdd\u5b58\u5b83\u7684\u8868\u5355\u3002
