--- a/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/richText/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/gui/components/form/flexible/impl/elements/richText/_i18n/LocalStrings_zh_CN.properties
@@ -2,3 +2,4 @@
 richText.element.target.window.alwayssame=\u603b\u5728\u540c\u4e00\u4e2a\u65b0\u7a97\u53e3\u5185\u6253\u5f00\u94fe\u63a5\u3002
 multiLine=\u591a\u884c
 formatted=\u683c\u5f0f\u5316
+oneLine=\u4e00\u884c
