--- a/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/groupsandrights/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,5 @@
 #Tue Mar 02 06:29:54 CET 2010
+remove.all=\u5220\u9664\u6240\u6709\u6743\u9650
 table.header.groups=\u7fa4\u7ec4
 table.header.role=\u89d2\u8272
 bgr.membermngt=\u6210\u5458\u7ba1\u7406
