--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_zh_CN.properties
@@ -79,7 +79,7 @@ form.imd.match.single.choice=\u5355\u9009\u9898
 form.imd.match.single.multiple=\u7c7b\u578b
 form.imd.mimetype=\u671f\u671b\u7684mime\u7c7b\u578b
 form.imd.rubric=\u63cf\u8ff0
-form.imd.shuffle=Shuffle answers
+form.imd.shuffle=\u62d6\u62fd\u7b54\u6848
 form.imd.title=\u6807\u9898
 form.imd.wrong.kprim=False
 form.kprim=Kprim
