--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,7 @@
 #Sun Oct 09 04:21:11 CEST 2016
+menu.database=\u6211\u7684\u95ee\u9898\u5e93
+menu.database.alt=\u6211\u7684\u95ee\u9898\u5e93
+menu.admin.review.process=\u5ba1\u6838\u8fc7\u7a0b
 rights.licensor=\u8ba4\u53ef\u8bc1\u9881\u53d1\u8005
 rights.freetext=\u8bb8\u53ef\u534f\u8bae\u6587\u672c
 
