--- a/src/main/java/org/olat/repository/ui/catalog/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/ui/catalog/_i18n/LocalStrings_zh_CN.properties
@@ -1,44 +1,45 @@
 #Thu Oct 09 01:46:00 CEST 2014
-cat.externalLink=\u76EE\u5F55\u7684\u5916\u90E8\u94FE\u63A5
-cat.login=\u767B\u9646
-cat.move.submit=\u79FB\u52A8\u5143\u7D20
-cat.move.title=\u4E3A\u76EE\u5F55\u6DFB\u52A0\u6761\u76EE
-catalog.locked.by=\u56E0\u4E3A\u76EE\u5F55\u76EE\u524D\u6B63\u5728\u88AB\u7528\u6237{0}\u7F16\u8F91\uFF0C\u6B64\u52A8\u4F5C\u4E0D\u80FD\u6267\u884C\u3002
-catalog.tree.add.already.exists=\u5B66\u4E60\u8D44\u6E90{0}\u5DF2\u7ECF\u52A0\u5165\u5230\u76EE\u5F55\u7C7B\u522B\u4E2D
-catalog.tree.add.intro=\u8BF7\u4E3A\u60A8\u8981\u79FB\u52A8\u5B66\u4E60\u8D44\u6E90{0}\u9009\u62E9\u4E00\u4E2A\u76EE\u5F55\u7C7B\u522B
-catalog.tree.add.title=\u628A\u5B66\u4E60\u5185\u5BB9"{0}"\u52A0\u5165\u5230\u76EE\u5F55\u4E2D
-catalog.tree.choosable.title=\u79FB\u52A8\u5143\u7D20\u5230\u6B64\u5C42
-catalog.tree.move.intro=\u8BF7\u4E3A\u60A8\u8981\u79FB\u52A8\u7684\u6761\u76EE{0}\u9009\u62E9\u4E00\u4E2A\u76EE\u5F55\u7C7B\u522B
-catalog.tree.move.noaccess=\u4F60\u6709\u6CA1\u6709\u505A\u591F\u7684\u6743\u9650\u6765\u9009\u62E9\u6B64\u7C7B\u522B
-catalog.tree.move.title=\u79FB\u52A8\u76EE\u5F55\u6761\u76EE"{0}"
-category=\u76EE\u5F55
-choose=\u9009\u62E9
-contact.caretaker=\u53D1\u9001\u8BF7\u6C42
-contact.to.groupname.caretaker=\u76EE\u5F55\u7BA1\u7406\u5458\u7FA4\u7EC4
-dialog.modal.leaf.delete.text=\u4F60\u662F\u5426\u8981\u5220\u9664\u94FE\u63A5\u201D{0}\u201C\uFF1F
-dialog.modal.subtree.delete.text=\u4F60\u662F\u5426\u8981\u5220\u9664\u76EE\u5F55\u201D{0}\u201C\u53CA\u5176\u5B50\u76EE\u5F55\u6216\u94FE\u63A5\uFF1F
-entry.category=\u540D\u79F0
-entry.description=\u8BF4\u660E
-entry.leaf=\u5B66\u4E60\u8D44\u6E90
-filtered.first=\u60A8\u6CA1\u6709\u767B\u5F55\uFF0C\u4E0B\u9762\u7684\u5217\u8868\u662F\u4E0D\u5B8C\u6574\u7684(
+catalog.courses=\u6211\u7684\u8bfe\u7a0b
+cat.externalLink=\u76ee\u5f55\u7684\u5916\u90e8\u94fe\u63a5
+cat.login=\u767b\u9646
+cat.move.submit=\u79fb\u52a8\u5143\u7d20
+cat.move.title=\u4e3a\u76ee\u5f55\u6dfb\u52a0\u6761\u76ee
+catalog.locked.by=\u56e0\u4e3a\u76ee\u5f55\u76ee\u524d\u6b63\u5728\u88ab\u7528\u6237{0}\u7f16\u8f91\uff0c\u6b64\u52a8\u4f5c\u4e0d\u80fd\u6267\u884c\u3002
+catalog.tree.add.already.exists=\u5b66\u4e60\u8d44\u6e90{0}\u5df2\u7ecf\u52a0\u5165\u5230\u76ee\u5f55\u7c7b\u522b\u4e2d
+catalog.tree.add.intro=\u8bf7\u4e3a\u60a8\u8981\u79fb\u52a8\u5b66\u4e60\u8d44\u6e90{0}\u9009\u62e9\u4e00\u4e2a\u76ee\u5f55\u7c7b\u522b
+catalog.tree.add.title=\u628a\u5b66\u4e60\u5185\u5bb9"{0}"\u52a0\u5165\u5230\u76ee\u5f55\u4e2d
+catalog.tree.choosable.title=\u79fb\u52a8\u5143\u7d20\u5230\u6b64\u5c42
+catalog.tree.move.intro=\u8bf7\u4e3a\u60a8\u8981\u79fb\u52a8\u7684\u6761\u76ee{0}\u9009\u62e9\u4e00\u4e2a\u76ee\u5f55\u7c7b\u522b
+catalog.tree.move.noaccess=\u4f60\u6709\u6ca1\u6709\u505a\u591f\u7684\u6743\u9650\u6765\u9009\u62e9\u6b64\u7c7b\u522b
+catalog.tree.move.title=\u79fb\u52a8\u76ee\u5f55\u6761\u76ee"{0}"
+category=\u76ee\u5f55
+choose=\u9009\u62e9
+contact.caretaker=\u53d1\u9001\u8bf7\u6c42
+contact.to.groupname.caretaker=\u76ee\u5f55\u7ba1\u7406\u5458\u7fa4\u7ec4
+dialog.modal.leaf.delete.text=\u4f60\u662f\u5426\u8981\u5220\u9664\u94fe\u63a5\u201d{0}\u201c\uff1f
+dialog.modal.subtree.delete.text=\u4f60\u662f\u5426\u8981\u5220\u9664\u76ee\u5f55\u201d{0}\u201c\u53ca\u5176\u5b50\u76ee\u5f55\u6216\u94fe\u63a5\uff1f
+entry.category=\u540d\u79f0
+entry.description=\u8bf4\u660e
+entry.leaf=\u5b66\u4e60\u8d44\u6e90
+filtered.first=\u60a8\u6ca1\u6709\u767b\u5f55\uff0c\u4e0b\u9762\u7684\u5217\u8868\u662f\u4e0d\u5b8c\u6574\u7684(
 filtered.second=).
-move=\u79FB\u52A8
-no.leaves=\u6CA1\u4EFB\u4F55\u5B66\u4E60\u8D44\u6E90\u88AB\u5206\u914D\u5230\u6B64\u76EE\u5F55\u4E2D
-repo.nocategories=\u8BE5\u5B66\u4E60\u8D44\u6E90\u8FD8\u6CA1\u6709\u52A0\u5165\u5230\u6B64\u76EE\u5F55\u4E2D
-title.categories=\u5B50\u76EE\u5F55
-title.leaves=\u5B66\u4E60\u8D44\u6E90
-tocontent=\u8FDB\u5165\u5185\u5BB9
-tools.add.catalog.bookmark=\u8BBE\u7F6E\u4E66\u7B7E
-tools.add.catalog.category=\u5B50\u76EE\u5F55
-tools.add.catalog.link=\u5B66\u4E60\u8D44\u6E90
-tools.add.header=\u6DFB\u52A0
+move=\u79fb\u52a8
+no.leaves=\u6ca1\u4efb\u4f55\u5b66\u4e60\u8d44\u6e90\u88ab\u5206\u914d\u5230\u6b64\u76ee\u5f55\u4e2d
+repo.nocategories=\u8be5\u5b66\u4e60\u8d44\u6e90\u8fd8\u6ca1\u6709\u52a0\u5165\u5230\u6b64\u76ee\u5f55\u4e2d
+title.categories=\u5b50\u76ee\u5f55
+title.leaves=\u5b66\u4e60\u8d44\u6e90
+tocontent=\u8fdb\u5165\u5185\u5bb9
+tools.add.catalog.bookmark=\u8bbe\u7f6e\u4e66\u7b7e
+tools.add.catalog.category=\u5b50\u76ee\u5f55
+tools.add.catalog.link=\u5b66\u4e60\u8d44\u6e90
+tools.add.header=\u6dfb\u52a0
 tools.delete.catalog.entry=\u5220\u9664
-tools.delete.catalog.image=\u5220\u9664\u56FE\u7247
-tools.edit.catalog.category=\u4FEE\u6539\u6570\u636E
-tools.edit.catalog.category.ownergroup=\u4EFB\u547D\u7BA1\u7406\u5458
-tools.edit.header=\u76EE\u5F55
-tools.move.catalog.entry=\u79FB\u52A8
-tools.move.catalog.entry.failed=\u6CA1\u6709\u53D1\u751F\u9519\u8BEF\uFF0C\u5143\u7D20\u4E0D\u4F1A\u88AB\u79FB\u52A8
-tools.move.catalog.entry.success=\u76EE\u5F55\u4E2D\u6761\u76EE"{0}"\u88AB\u6210\u529F\u79FB\u52A8\u3002
-tools.new.catalog.categoryrequest=\u8054\u7CFB\u7BA1\u7406\u5458
-tools.pastestructure=\u63D2\u5165\u7ED3\u6784
+tools.delete.catalog.image=\u5220\u9664\u56fe\u7247
+tools.edit.catalog.category=\u4fee\u6539\u6570\u636e
+tools.edit.catalog.category.ownergroup=\u4efb\u547d\u7ba1\u7406\u5458
+tools.edit.header=\u76ee\u5f55
+tools.move.catalog.entry=\u79fb\u52a8
+tools.move.catalog.entry.failed=\u6ca1\u6709\u53d1\u751f\u9519\u8bef\uff0c\u5143\u7d20\u4e0d\u4f1a\u88ab\u79fb\u52a8
+tools.move.catalog.entry.success=\u76ee\u5f55\u4e2d\u6761\u76ee"{0}"\u88ab\u6210\u529f\u79fb\u52a8\u3002
+tools.new.catalog.categoryrequest=\u8054\u7cfb\u7ba1\u7406\u5458
+tools.pastestructure=\u63d2\u5165\u7ed3\u6784
