--- a/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/site/ui/_i18n/LocalStrings_zh_CN.properties
@@ -3,3 +3,5 @@ admin.menu.title=\u9875\u9762
 admin.menu.title.alt=\u9875\u9762\u914d\u7f6e
 courseSiteForbiddenAlt=\u7981\u6b62\u63a7\u5236
 GroupsSiteDef=\u7fa4\u7ec4
+CurriculumAdminSiteDef=\u8bfe\u7a0b\u7ba1\u7406
+AdminSiteDef=\u7cfb\u7edf\u7ba1\u7406
