--- a/src/main/java/org/olat/admin/user/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/user/_i18n/LocalStrings_de.properties
@@ -1,50 +1,50 @@
 #Fri Mar 23 15:02:47 CET 2018
-action.bulkedit=Attribute dieser Benutzer \u00E4ndern
-action.choose=W\u00E4hlen
-action.choose.finish=W\u00E4hlen und Fertigstellen
-action.select=W\u00E4hlen
+action.bulkedit=Attribute dieser Benutzer \u00e4ndern
+action.choose=W\u00e4hlen
+action.choose.finish=W\u00e4hlen und Fertigstellen
+action.select=W\u00e4hlen
 admins=Administrator
-authedit.delete.confirm=Sind Sie sicher, dass Sie den Authentifizierungs-Provider {0} f\u00FCr Benutzer {1} l\u00F6schen m\u00F6chten?
-authedit.delete.success=Authentifizierungs-Provider {0} f\u00FCr Benutzer {1} wurde gel\u00F6scht.
+authedit.delete.confirm=Sind Sie sicher, dass Sie den Authentifizierungs-Provider {0} f\u00fcr Benutzer {1} l\u00f6schen m\u00f6chten?
+authedit.delete.success=Authentifizierungs-Provider {0} f\u00fcr Benutzer {1} wurde gel\u00f6scht.
 autocomplete.noresults=$org.olat.core.gui.control.generic.ajax.autocompletion\:autocomplete.noresults
 autocompletion.info=Geben Sie einen OpenOLAT-Benutzernamen, Vornamen oder Nachnamen ein.
 authors=Autor
 bgroupcoach=Gruppebetreuer
-btn.back=Zur\u00FCck
-bulkChange.failed=Es wurden keinen \u00C4nderungen vorgenommen
-bulkChange.partialsuccess={0} von {1} \u00C4nderungen erfolgreich. Folgende Benutzer-Attribute konnten nicht ge\u00E4ndert werden\: {2}
-bulkChange.success=\u00C4nderungen erfolgreich abgeschlossen
-bulkChange.title=\u00C4nderung von Benutzer-Attributen
-changeuserpwd.cancel=Die Aktion wurde abgebrochen. Das Passwort bleibt unver\u00E4ndert.
+btn.back=Zur\u00fcck
+bulkChange.failed=Es wurden keinen \u00c4nderungen vorgenommen
+bulkChange.partialsuccess={0} von {1} \u00c4nderungen erfolgreich. Folgende Benutzer-Attribute konnten nicht ge\u00e4ndert werden\: {2}
+bulkChange.success=\u00c4nderungen erfolgreich abgeschlossen
+bulkChange.title=\u00c4nderung von Benutzer-Attributen
+changeuserpwd.cancel=Die Aktion wurde abgebrochen. Das Passwort bleibt unver\u00e4ndert.
 changeuserpwd.failed=Ihr neues Passwort wurde nicht gespeichert. Ein unerwarteter Fehler ist aufgetreten.
-changeuserpwd.successful=Das neue Passwort wurde gespeichert. Es ist ab sofort g\u00FCltig.
+changeuserpwd.successful=Das neue Passwort wurde gespeichert. Es ist ab sofort g\u00fcltig.
 clear=Entfernen
 command.mail=E-Mail an diese Benutzer
-confirm.clear.identity=Wollen Sie den Vorname und Nachname von diesem gel\u00F6schten Benutzer "{0}" entfernen? 
-content.usermgmt.text1=Hier k\u00F6nnen Sie Daten von OLAT-Benutzern \u00E4ndern und verwalten. Bitte beginnen Sie mit der Suche nach Benutzern.
+confirm.clear.identity=Wollen Sie den Vorname und Nachname von diesem gel\u00f6schten Benutzer "{0}" entfernen? 
+content.usermgmt.text1=Hier k\u00f6nnen Sie Daten von OLAT-Benutzern \u00e4ndern und verwalten. Bitte beginnen Sie mit der Suche nach Benutzern.
 content.usermgmt.title=Benutzerverwaltung
 content.usermgmt.userfound=Benutzereinstellungen verwalten
 delete.pending.registration.confirmation.title=Selbstregistrierung l\u00f6schen
 delete.pending.registration.confirmation=Es existiert eine pendente Selbstregistrierung f\u00fcr die Email-Adresse "{0}". Wollen Sie diese Selbstregistrierung l\u00f6schen?
-deleted.user.list=Liste der gel\u00F6schte Benutzer
+deleted.user.list=Liste der gel\u00f6schte Benutzer
 deselectall=$org.olat.core.gui.components.table\:uncheckall
 edit.uauth=Authentifizierungen
 edit.uhomepage=Visitenkarte
 edit.uprefs=Systemeinstellungen
 edit.uprofile=Benutzerprofil
 edit.uprop=Properties
-edit.upwd=Passwort \u00E4ndern
+edit.upwd=Passwort \u00e4ndern
 edit.uquota=Quota
 edit.urelations=Beziehungen
 edit.uroles=Rollen
 email.notsent=$org.olat.user\:email.notsent
 email.sent=$org.olat.user\:email.sent
 error.no.user.found=Es konnte kein Benutzer mit diesen Angaben gefunden werden. Bitte versuchen Sie es noch einmal.
-error.noaccess.to.user=Sie haben nicht gen\u00FCgend Berechtigungen um diesen Benutzer zu editieren. Wenden Sie Sich an {0}.
-error.password.nomatch=Die beiden neuen Passw\u00F6rter stimmen nicht \u00FCberein.
-error.search.form.no.valid.datechooser=Bitte geben Sie ein g\u00FCltiges Datum an.
+error.noaccess.to.user=Sie haben nicht gen\u00fcgend Berechtigungen um diesen Benutzer zu editieren. Wenden Sie Sich an {0}.
+error.password.nomatch=Die beiden neuen Passw\u00f6rter stimmen nicht \u00fcberein.
+error.search.form.no.valid.datechooser=Bitte geben Sie ein g\u00fcltiges Datum an.
 error.search.form.no.wildcard.dublicates=Suchbegriffe mit `**` sind nicht erlaubt.
-error.search.form.notempty=F\u00FCllen Sie bitte mindestens ein Feld aus.
+error.search.form.notempty=F\u00fcllen Sie bitte mindestens ein Feld aus.
 error.search.form.to.short=Suchbegriff ist zu kurz.
 error.search.maxResults=Zuviele Treffer wurde gefunden. Nur die ersten {0} werden angezeigt.
 error.roles.atleastone=Mindestens eine Rolle ist erforderlich
@@ -52,31 +52,31 @@ error.roles.atleastone.userorinvitee=Mindestens eine Rolle "$\:role.user" oder "
 export.user.data=Daten exportieren
 export.user.data.title=Benutzerdaten von "{0}" exportieren
 form.password.new1=Neues Passwort
-form.password.new2=Passwort best\u00E4tigen
-form.please.enter.new=Bitte geben Sie das neue Passwort f\u00FCr diesen Benutzer ein.
-form.token.new.description=Mit Hilfe der Schaltfl\u00E4che "Passwortlink senden" erstellen Sie einen Passwortlink und senden diesen direkt per Mail an den Benutzer. Mit einem Klick darauf wird das alte Passwort zur\u00FCckgesetzt und der Benutzer kann ein neues Passwort eingeben.
+form.password.new2=Passwort best\u00e4tigen
+form.please.enter.new=Bitte geben Sie das neue Passwort f\u00fcr diesen Benutzer ein.
+form.token.new.description=Mit Hilfe der Schaltfl\u00e4che "Passwortlink senden" erstellen Sie einen Passwortlink und senden diesen direkt per Mail an den Benutzer. Mit einem Klick darauf wird das alte Passwort zur\u00fcckgesetzt und der Benutzer kann ein neues Passwort eingeben.
 form.token.new.text=Nachricht
-form.token.new.title=Passwortlink senden f\u00FCr OpenOLAT Passwort
+form.token.new.title=Passwortlink senden f\u00fcr OpenOLAT Passwort
 form.username=Benutzername
-found.property=Property ausgew\u00E4hlt {0}
+found.property=Property ausgew\u00e4hlt {0}
 groupmanagers=Gruppenverwalter
-header.autocompletion=Suche mit Autovervollst\u00E4ndigung
+header.autocompletion=Suche mit Autovervollst\u00e4ndigung
 header.normal=Suche mit Benutzerattributen
-instoresmanager=Lernressourcenverwalter
-mailtemplate.login.denied.body=Sehr geehrte/r {6} {4},\n\nIhr OpenOLAT Account {0} mit der E-Mail {1} auf dem System {5} wurde deaktiviert.\n\nWenn Sie m\u00F6chten, dass der Account wieder aktiviert wird, dann melden Sie sich bitte beim Support unter {3}.\n\n\nViele Gr\u00FCsse\nDas e-Learning Team
+instoresmanager=Lernressourcenverwalter\u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
+mailtemplate.login.denied.body=Sehr geehrte/r {6} {4},\n\nIhr OpenOLAT Account {0} mit der E-Mail {1} auf dem System {5} wurde deaktiviert.\n\nWenn Sie m\u00f6chten, dass der Account wieder aktiviert wird, dann melden Sie sich bitte beim Support unter {3}.\n\n\nViele Gr\u00fcsse\nDas e-Learning Team
 mailtemplate.login.denied.subject=Deaktivierung ihres OpenOLAT Accounts
 mailto.userlist=Liste der Benutzer
-msg.selectionempty=Bitte min. einen User ausw\u00E4hlen.
-new.error.email.choosen=Diese E-Mail-Adresse ist bereits vorhanden, Sie k\u00F6nnen f\u00FCr diese Person kein neues Benutzerkonto erstellen. Es wurden keine Daten gespeichert.
+msg.selectionempty=Bitte min. einen User ausw\u00e4hlen.
+new.error.email.choosen=Diese E-Mail-Adresse ist bereits vorhanden, Sie k\u00f6nnen f\u00fcr diese Person kein neues Benutzerkonto erstellen. Es wurden keine Daten gespeichert.
 new.error.loginname.choosen=Dieser Benutzername ist bereits vergeben. Versuchen Sie es mit einem anderen Benutzernamen.
 new.error.loginname.empty=$org.olat.user\:form.checkUsername
-new.error.password.nomatch=Die beiden Passw\u00F6rter stimmen nicht \u00FCberein.
+new.error.password.nomatch=Die beiden Passw\u00f6rter stimmen nicht \u00fcberein.
 new.error.property.invalid=Invalid input\!
 new.form.auth=OLAT-Passwort
 new.form.auth.false=nicht jetzt anlegen
 new.form.auth.true=anlegen
 new.form.language=Sprache
-new.form.mandatory=Dieses Feld muss aufgef\u00FCllt werden.
+new.form.mandatory=Dieses Feld muss aufgef\u00fcllt werden.
 new.form.organisations=Organisation
 new.form.password.new1=Passwort
 new.form.password.new2=Passwort verifizieren
@@ -86,12 +86,12 @@ new.form.username=Benutzername
 new.user.cancel=Die Aktion wurde abgebrochen. Es wurde keine neues Benutzerkonto angelegt.
 new.user.successful=Das neue Benutzerkonto wurde angelegt.
 notification.noNews=Seit diesem Datum haben sich keine neue Benutzer angemeldet
-notification.noSubscription=Sie haben Benachrichtigung \u00FCber neue Benutzer nicht abonniert
+notification.noSubscription=Sie haben Benachrichtigung \u00fcber neue Benutzer nicht abonniert
 owner=Kursbesitzer
 poolsmanager=Poolverwalter
 repocoach=Kursbetreuer
-rightForm.error.anonymous.no.roles=Anonyme G\u00E4ste k\u00F6nnen keine Systemrollen wahrnehmen
-rightsForm.add.to.organisation=Zur Organisation hinzuf\u00FCgen
+rightForm.error.anonymous.no.roles=Anonyme G\u00e4ste k\u00f6nnen keine Systemrollen wahrnehmen
+rightsForm.add.to.organisation=Zur Organisation hinzuf\u00fcgen
 role.administrator=Administrator
 role.guest=Anonymer Gast
 role.guest.false=Registrierter Benutzer
@@ -99,29 +99,29 @@ role.guest.true=Anonymer Gast
 role.author=Autor
 role.curriculummanager=Curriculumverwalter
 role.groupmanager=Gruppenverwalter
-role.learnresourcemanager=Lernressourcenverwalter
+role.learnresourcemanager=Lernressourcenverwalter \u8bfe\u7a0b\u8d44\u6e90\u7ecf\u7406
 role.invitee=Einladung
-role.lecturemanager=Lektionblockverwalter
-role.linemanager=Line manager
+role.lecturemanager=Lektionblockverwalter \u6f14\u8bb2\u7ecf\u7406
+role.linemanager=Line manager\u751f\u547d\u7ebf\u7ecf\u7406
 rightsForm.isLoginDenied=Login gesperrt
-role.poolmanager=Poolverwalter
-role.principal=Principal
-role.qualitymanager=Qualityverwalter
-role.rolesmanager=Rollenverwalter
+role.poolmanager=Poolverwalter \u95ee\u9898\u6c60\u7ecf\u7406
+role.principal=Principal\u6821\u957f
+role.qualitymanager=Qualityverwalter\u8d28\u91cf\u7ecf\u7406
+role.rolesmanager=Rollenverwalter \u89d2\u8272\u7ecf\u7406
 role.user=Benutzer
 role.usermanager=Benutzerverwalter
 role.sysadmin=Systemadministrator
 rightsForm.guest=Benutzertyp
 rightsForm.roles=Rollen
-rightsForm.roles.for=Rollen f\u00FCr "{0}"
-rightsForm.sendLoginDeniedEmail=Benutzer \u00FCber Loginsperre informieren
+rightsForm.roles.for=Rollen f\u00fcr "{0}"
+rightsForm.sendLoginDeniedEmail=Benutzer \u00fcber Loginsperre informieren
 rightsForm.status=Status
 rightsForm.status.activ=Aktiv
 rightsForm.status.any.visible=Alle aktiven
-rightsForm.status.deleted=Gel\u00F6scht
+rightsForm.status.deleted=Gel\u00f6scht
 rightsForm.status.login_denied=Login gesperrt
 rightsForm.status.pending=Ausstehende
-rightsForm.status.permanent=Aktiv und nicht l\u00F6schbar
+rightsForm.status.permanent=Aktiv und nicht l\u00f6schbar
 rightsForm.title=Systemrollen und Rechte zuteilen
 search.cancel=Die Aktion wurde abgebrochen.
 search.form.afterDate=Benutzer erstellt nach
@@ -154,17 +154,17 @@ search.form.constraint.usermanager=$\:role.usermanager
 
 search.form.id=ID
 search.form.login=Benutzername
-search.form.title.authentications=Einschr\u00E4nkung auf Authentifizierung
-search.form.title.date=Einschr\u00E4nkung auf Erstellungsdatum
-search.form.title.roles=Einschr\u00E4nkung auf Systemrolle
-search.form.title.status=Einschr\u00E4nkung auf Account Status
-search.form.title.user=Einschr\u00E4nkung auf Benutzer
+search.form.title.authentications=Einschr\u00e4nkung auf Authentifizierung
+search.form.title.date=Einschr\u00e4nkung auf Erstellungsdatum
+search.form.title.roles=Einschr\u00e4nkung auf Systemrolle
+search.form.title.status=Einschr\u00e4nkung auf Account Status
+search.form.title.user=Einschr\u00e4nkung auf Benutzer
 search.form.title.organisations=Organisationen
 search.form.userLoginAfterDate=Nutzer hat sich zuletzt angemeldet nach
 search.form.userLoginBeforeDate=Nutzer hat sich zuletzt angemeldet vor
 selectall=$org.olat.core.gui.components.table\:checkall
 select.organisation=Organisation
-sendtoken.wrong.auth=Dieser Benutzer verf\u00FCgt \u00FCber Authentifizierungsmethoden, welche nicht \u00FCber diesen Passwortlink ge\u00E4ndert werden k\u00F6nnen. Bitte pr\u00FCfen und l\u00F6schen Sie diese Authentifizierungsmethoden zuerst.
+sendtoken.wrong.auth=Dieser Benutzer verf\u00fcgt \u00fcber Authentifizierungsmethoden, welche nicht \u00fcber diesen Passwortlink ge\u00e4ndert werden k\u00f6nnen. Bitte pr\u00fcfen und l\u00f6schen Sie diese Authentifizierungsmethoden zuerst.
 submit.cancel=Abbrechen
 submit.save=Speichern
 submit.search=Suchen
@@ -174,8 +174,8 @@ table.auth.provider=Provider
 table.header.action=Aktion
 table.header.vcard=Visitenkarte
 table.identity.action=Aktion
-table.identity.deletedby=Gel\u00F6scht von
-table.identity.deleteddate=Gel\u00F6scht am
+table.identity.deletedby=Gel\u00f6scht von
+table.identity.deleteddate=Gel\u00f6scht am
 table.identity.deletedroles=Rollen
 table.identity.deleted.name=Del_Benutzername
 table.identity.creationdate=Erstellt
@@ -192,8 +192,8 @@ title.exeUAuths=Authentifizierungen
 title.exeUPrefs=Systemeinstellungen von {0}
 title.exeUProfile=Benutzerprofil von {0}
 title.exeUProps=Properties von {0}
-title.exeUPwd=Passwort von {0} \u00E4ndern
-title.exeUQuota=Quota im pers\u00F6nlichen Ordner
+title.exeUPwd=Passwort von {0} \u00e4ndern
+title.exeUQuota=Quota im pers\u00f6nlichen Ordner
 title.mail=E-Mail an Liste der Benutzer
 title.newuser=Benutzer anlegen
 title.user.new=Neues OLAT-Benutzerkonto erstellen
