--- a/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_zh_CN.properties
@@ -1,91 +1,92 @@
 #Tue Mar 28 14:18:25 CEST 2017
-AssessmentManager=\u8BC4\u4F30\u5DE5\u5177
-Binder=\u7EC4\u5408
-BinderTemplate=Portfolio 2.0 \u6A21\u677F
-BusinessGroup=\u4E8B\u52A1\u7EC4
-CalendarManager=\u65E5\u5386
-CalendarManager.course=\u5B66\u7A0B\u65E5\u5386
-CalendarManager.group=\u7FA4\u7EC4\u65E5\u5386
-CatalogEntry=\u76EE\u5F55\u6761\u76EE
-CertificatesManager=\u8BC1\u4E66
-CourseBb=\u5B66\u7A0B\u5143\u7D20
-CourseModule=\u5B66\u7A0B
-DENCourseNode=\u5165\u5B66\u6CE8\u518C\u65E5\u671F
-DialogElement=\u6587\u4EF6\u5BF9\u8BDD\u6846
-DropboxController=\u4E0B\u62C9\u6846
+topnav.curriculum.admin=\u8bfe\u7a0b\u7ba1\u7406
+AssessmentManager=\u8bc4\u4f30\u5de5\u5177
+Binder=\u7ec4\u5408
+BinderTemplate=Portfolio 2.0 \u6a21\u677f
+BusinessGroup=\u4e8b\u52a1\u7ec4
+CalendarManager=\u65e5\u5386
+CalendarManager.course=\u5b66\u7a0b\u65e5\u5386
+CalendarManager.group=\u7fa4\u7ec4\u65e5\u5386
+CatalogEntry=\u76ee\u5f55\u6761\u76ee
+CertificatesManager=\u8bc1\u4e66
+CourseBb=\u5b66\u7a0b\u5143\u7d20
+CourseModule=\u5b66\u7a0b
+DENCourseNode=\u5165\u5b66\u6ce8\u518c\u65e5\u671f
+DialogElement=\u6587\u4ef6\u5bf9\u8bdd\u6846
+DropboxController=\u4e0b\u62c9\u6846
 EPStructuredMap=ePortfolio
-EPStructuredMapTemplate=Portfolio \u6A21\u677F
-FileResource.ANIM=\u52A8\u753B
-FileResource.BLOG=\u535A\u5BA2
+EPStructuredMapTemplate=Portfolio \u6a21\u677f
+FileResource.ANIM=\u52a8\u753b
+FileResource.BLOG=\u535a\u5ba2
 FileResource.DOC=Word
-FileResource.FILE=\u6587\u4EF6
-FileResource.FORM=\u8C03\u67E5\uFF08\u7EC4\u5408\uFF09
-FileResource.GLOSSARY=\u672F\u8BED\u8BCD\u6C47\u8868
-FileResource.IMAGE=\u56FE\u7247
-FileResource.IMSCP=CP\u5B66\u4E60\u5185\u5BB9\u5305
+FileResource.FILE=\u6587\u4ef6
+FileResource.FORM=\u8c03\u67e5\uff08\u7ec4\u5408\uff09
+FileResource.GLOSSARY=\u672f\u8bed\u8bcd\u6c47\u8868
+FileResource.IMAGE=\u56fe\u7247
+FileResource.IMSCP=CP\u5b66\u4e60\u5185\u5bb9\u5305
 FileResource.IMSQTI21=Test (QTI 2.1)
-FileResource.MOVIE=\u89C6\u9891
+FileResource.MOVIE=\u89c6\u9891
 FileResource.PDF=PDF
-FileResource.PODCAST=\u64AD\u5BA2
+FileResource.PODCAST=\u64ad\u5ba2
 FileResource.PPT=PowerPoint
-FileResource.SCORMCP=SCORM\u6807\u51C6\u5B66\u4E60\u5185\u5BB9\u5305
-FileResource.SHAREDFOLDER=\u8D44\u6E90\u6587\u4EF6\u5939
-FileResource.SOUND=\u97F3\u9891
-FileResource.SURVEY=\u8C03\u67E5\u95EE\u5377
-FileResource.TEST=\u6D4B\u9A8C
+FileResource.SCORMCP=SCORM\u6807\u51c6\u5b66\u4e60\u5185\u5bb9\u5305
+FileResource.SHAREDFOLDER=\u8d44\u6e90\u6587\u4ef6\u5939
+FileResource.SOUND=\u97f3\u9891
+FileResource.SURVEY=\u8c03\u67e5\u95ee\u5377
+FileResource.TEST=\u6d4b\u9a8c
 FileResource.VIDEO=Video
-FileResource.WIKI=\u7EF4\u57FA
+FileResource.WIKI=\u7ef4\u57fa
 FileResource.XLS=Excel
-FolderModule=\u6587\u4EF6\u5939
-Forum=\u8BBA\u575B
-GroupTask=\u4EFB\u52A1
-Inbox=\u6536\u4EF6\u7BB1
-InfoMessage=\u6D88\u606F
-LibrarySite=\u5E93
-PFCourseNode=\u4E0B\u62C9\u6846
-ReturnboxController=\u53CD\u9988\u7BB1
-SolutionController=\u793A\u4F8B\u65B9\u6848
+FolderModule=\u6587\u4ef6\u5939
+Forum=\u8bba\u575b
+GroupTask=\u4efb\u52a1
+Inbox=\u6536\u4ef6\u7bb1
+InfoMessage=\u6d88\u606f
+LibrarySite=\u5e93
+PFCourseNode=\u4e0b\u62c9\u6846
+ReturnboxController=\u53cd\u9988\u7bb1
+SolutionController=\u793a\u4f8b\u65b9\u6848
 User=\u7528\u6237
-WikiPage=\u7EF4\u57FA
-ajax.show.on=[Ajax\u963F\u8D3E\u514B\u65AF\u6D4B\u8BD5\u6A21\u5F0F]
-jump.to.content=\u8F6C\u5230&quot;\u5185\u5BB9&quot;
-jump.to.menu=\u8F6C\u5230&quot;\u83DC\u5355&quot;
-jump.to.nav=\u8F6C\u5230 &quot;\u5BFC\u822A&quot;
-jump.to.table.content=\u8F6C\u5230\u8868\u683C\u5185\u5BB9\u9875\u9762
-jump.to.tools=\u8F6C\u5230 "\u5DE5\u5177"\u9875\u9762
-select.language=\u8BF7\u9009\u62E9\u60A8\u7684\u8BED\u8A00
-status_closed=\u5B8C\u6210
-status_sticky=\u7C98\u8D34
-status_sticky_closed=\u7C98\u8D34\u5B8C\u6210
-status_thread=\u8BBA\u575B\u4E3B\u9898
-topnav.admin=\u7CFB\u7EDF\u7BA1\u7406
-topnav.admin.alt=\u7BA1\u7406OLAT\u5B89\u88C5
-topnav.buddygroups=\u7FA4  \u7EC4
-topnav.buddygroups.alt=\u4E0E\u4E2A\u4EBA\u5B66\u4E60\u7EC4\u548C\u5DE5\u4F5C\u7EC4\u534F\u4F5C
-topnav.catalog=\u76EE\u5F55
-topnav.catalog.admin=\u76EE\u5F55\u7BA1\u7406
-topnav.catalog.admin.alt=\u7BA1\u7406\u76EE\u5F55\u4E2D\u7684\u5B66\u4E60\u8D44\u6E90
-topnav.catalog.alt=\u76EE\u5F55
-topnav.close=\u5173\u95ED\u7A97\u53E3
-topnav.close.alt=\u5173\u95ED\u8BE5\u7A97\u53E3
-topnav.closeRecent=\u5173\u95ED
-topnav.dr=\u5B66\u4E60\u8D44\u6E90
-topnav.dr.alt=\u641C\u7D22\u5B66\u4E60\u5185\u5BB9
-topnav.gm=\u7FA4\u7EC4\u7BA1\u7406
-topnav.gm.alt=\u7EFC\u5408\u7BA1\u7406\u60A8\u7684\u5B66\u7A0B\u7FA4\u7EC4
-topnav.guesthome=\u6E38\u5BA2\u9996\u9875
-topnav.guesthome.alt=\u60A8\u4F5C\u4E3A\u6E38\u5BA2\u5F00\u59CB\u767B\u5F55OLAT \u3002
+WikiPage=\u7ef4\u57fa
+ajax.show.on=[Ajax\u963f\u8d3e\u514b\u65af\u6d4b\u8bd5\u6a21\u5f0f]
+jump.to.content=\u8f6c\u5230&quot;\u5185\u5bb9&quot;
+jump.to.menu=\u8f6c\u5230&quot;\u83dc\u5355&quot;
+jump.to.nav=\u8f6c\u5230 &quot;\u5bfc\u822a&quot;
+jump.to.table.content=\u8f6c\u5230\u8868\u683c\u5185\u5bb9\u9875\u9762
+jump.to.tools=\u8f6c\u5230 "\u5de5\u5177"\u9875\u9762
+select.language=\u8bf7\u9009\u62e9\u60a8\u7684\u8bed\u8a00
+status_closed=\u5b8c\u6210
+status_sticky=\u7c98\u8d34
+status_sticky_closed=\u7c98\u8d34\u5b8c\u6210
+status_thread=\u8bba\u575b\u4e3b\u9898
+topnav.admin=\u7cfb\u7edf\u7ba1\u7406
+topnav.admin.alt=\u7ba1\u7406OLAT\u5b89\u88c5
+topnav.buddygroups=\u7fa4  \u7ec4
+topnav.buddygroups.alt=\u4e0e\u4e2a\u4eba\u5b66\u4e60\u7ec4\u548c\u5de5\u4f5c\u7ec4\u534f\u4f5c
+topnav.catalog=\u76ee\u5f55
+topnav.catalog.admin=\u76ee\u5f55\u7ba1\u7406
+topnav.catalog.admin.alt=\u7ba1\u7406\u76ee\u5f55\u4e2d\u7684\u5b66\u4e60\u8d44\u6e90
+topnav.catalog.alt=\u76ee\u5f55
+topnav.close=\u5173\u95ed\u7a97\u53e3
+topnav.close.alt=\u5173\u95ed\u8be5\u7a97\u53e3
+topnav.closeRecent=\u5173\u95ed
+topnav.dr=\u5b66\u4e60\u8d44\u6e90
+topnav.dr.alt=\u641c\u7d22\u5b66\u4e60\u5185\u5bb9
+topnav.gm=\u7fa4\u7ec4\u7ba1\u7406
+topnav.gm.alt=\u7efc\u5408\u7ba1\u7406\u60a8\u7684\u5b66\u7a0b\u7fa4\u7ec4
+topnav.guesthome=\u6e38\u5ba2\u9996\u9875
+topnav.guesthome.alt=\u60a8\u4f5c\u4e3a\u6e38\u5ba2\u5f00\u59cb\u767b\u5f55OLAT \u3002
 topnav.home=\u9996  \u9875
-topnav.home.alt=\u60A8\u4F5C\u4E3A\u7528\u6237\u5728OLAT\u7684\u5F00\u59CB\u3002
-topnav.mycourses=\u8BFE\u7A0B
-topnav.mycourses.alt=\u8BFE\u7A0B
-topnav.portal=\u95E8\u6237
-topnav.portal.alt=\u6240\u6709\u95E8\u6237\u7EC4\u4EF6
+topnav.home.alt=\u60a8\u4f5c\u4e3a\u7528\u6237\u5728OLAT\u7684\u5f00\u59cb\u3002
+topnav.mycourses=\u8bfe\u7a0b
+topnav.mycourses.alt=\u8bfe\u7a0b
+topnav.portal=\u95e8\u6237
+topnav.portal.alt=\u6240\u6709\u95e8\u6237\u7ec4\u4ef6
 topnav.printview=\u6253\u5370
-topnav.printview.alt=\u6253\u5370\u8BE5\u9875
-topnav.testing=\u6D4B\u9A8C
-topnav.testing.alt=\u9488\u5BF9\u5F00\u53D1\u9636\u6BB5\u7684\u7EC4\u4EF6\u6D4B\u8BD5\uFF0C\u975E\u4EA7\u54C1\u7EC4\u4EF6\u6D4B\u8BD5
-topnav.useradmin=\u7528\u6237\u7BA1\u7406
-topnav.useradmin.alt=\u7BA1\u7406OLAT\u7528\u6237
-wayf.cookies=\u767B\u5F55\u65F6\u8BF7\u5141\u8BB8\u4F7F\u7528Cookies
-wayf.help.noscript=\u8BF7\u6FC0\u6D3BJavascript\u3002<br><br>\u5426\u5219\uFF0COLAT\u4E0D\u80FD\u6B63\u5E38\u8FD0\u884C\u3002
+topnav.printview.alt=\u6253\u5370\u8be5\u9875
+topnav.testing=\u6d4b\u9a8c
+topnav.testing.alt=\u9488\u5bf9\u5f00\u53d1\u9636\u6bb5\u7684\u7ec4\u4ef6\u6d4b\u8bd5\uff0c\u975e\u4ea7\u54c1\u7ec4\u4ef6\u6d4b\u8bd5
+topnav.useradmin=\u7528\u6237\u7ba1\u7406
+topnav.useradmin.alt=\u7ba1\u7406OLAT\u7528\u6237
+wayf.cookies=\u767b\u5f55\u65f6\u8bf7\u5141\u8bb8\u4f7f\u7528Cookies
+wayf.help.noscript=\u8bf7\u6fc0\u6d3bJavascript\u3002<br><br>\u5426\u5219\uff0cOLAT\u4e0d\u80fd\u6b63\u5e38\u8fd0\u884c\u3002
