--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
@@ -1,12 +1,18 @@
 #Thu Sep 03 11:24:43 CEST 2015
-allowRelativeLinks=\u5141\u8BB8\u5728\u6574\u4E2A\u5B58\u50A8\u5939\u4E2D\u4F7F\u7528\u94FE\u63A5.
-Intro.self=\u70B9\u51FB"\u5F00\u59CB"\u6309\u94AE\u53C2\u4E0E\u81EA\u6D4B
-Intro.surv=\u70B9\u51FB"\u5F00\u59CB"\u6309\u94AE\u586B\u5199\u95EE\u5377
-Intro.test=\u70B9\u51FB"\u5F00\u59CB"\u6309\u94AE\u53C2\u4E0E\u6D4B\u8BD5
-attempts.nomoreattempts=\u4F60\u4E0D\u80FD\u518D\u6B21\u542F\u52A8\u8BE5\u6D4B\u8BD5
-attempts.yourattempts=\u5C1D\u8BD5\u6B21\u6570
-changelog.title=\u8D44\u6E90\u53D8\u66F4\u65E5\u5FD7
-correction.test.title=\u8BC4\u5206
+qti.form.showfeedbacks=\u663e\u793a\u53cd\u9988
+qti.form.max.score.item=\u663e\u793a\u6700\u5927\u7684\u95ee\u9898\u70b9Show questions max. points
+qti.form.auto.memofield=\u4e2a\u4eba\u7b14\u8bb0
+qti.form.fullwindow=\u53ea\u663e\u793a\u6a21\u5757\uff0c\u9690\u85cfLMS
+qti.form.allow.anonym=\u5141\u8bb8\u533f\u540d\u7528\u6237(\u8bbf\u5ba2)
+qti.form.block.afterSuccess=\u7b2c\u4e00\u6b21\u6210\u529f\u5c1d\u8bd5\u6b21\u6570
+allowRelativeLinks=\u5141\u8bb8\u5728\u6574\u4e2a\u5b58\u50a8\u5939\u4e2d\u4f7f\u7528\u94fe\u63a5.
+Intro.self=\u70b9\u51fb"\u5f00\u59cb"\u6309\u94ae\u53c2\u4e0e\u81ea\u6d4b
+Intro.surv=\u70b9\u51fb"\u5f00\u59cb"\u6309\u94ae\u586b\u5199\u95ee\u5377
+Intro.test=\u70b9\u51fb"\u5f00\u59cb"\u6309\u94ae\u53c2\u4e0e\u6d4b\u8bd5
+attempts.nomoreattempts=\u4f60\u4e0d\u80fd\u518d\u6b21\u542f\u52a8\u8be5\u6d4b\u8bd5
+attempts.yourattempts=\u5c1d\u8bd5\u6b21\u6570
+changelog.title=\u8d44\u6e90\u53d8\u66f4\u65e5\u5fd7
+correction.test.title=\u8bc4\u5206
 
 
 
@@ -41,108 +47,108 @@ correction.test.title=\u8BC4\u5206
 
 
 
-choosenfile.self=\u81EA\u6D4B
-choosenfile.surv=\u95EE\u5377
-choosenfile.test=\u6D4B\u8BD5
-choosenlayout=\u5E03\u5C40\u53C2\u6570
-command.changeRepFile=\u66FF\u6362
-command.chooseRepFile=\u9009\u62E9\u3001\u521B\u5EFA\u6216\u8005\u5BFC\u5165\u6587\u4EF6
-command.chooseSurvey=\u9009\u62E9\u95EE\u5377
-command.chooseTest=\u9009\u62E9\u6D4B\u8BD5
-command.closePreview=\u5173\u95ED\u9884\u89C8
-command.createSurvey=\u9009\u62E9\u3001\u521B\u5EFA\u6216\u8005\u5BFC\u5165\u8C03\u67E5\u95EE\u5377
-command.editRepFile=\u7F16\u8F91
-command.hideResults=\u9690\u85CF\u6210\u7EE9
-command.preview=\u9884\u89C8
-command.showResults=\u663E\u793A\u6210\u7EE9
-comment.yourcomment=\u8F85\u5BFC\u8001\u5E08\u7684\u6279\u6CE8
-condition.accessibility.title=\u8BBF\u95EE
-correcttest=\u6B63\u786E\u7684\u6D4B\u8BD5
-coursefolder=\u8BFE\u7A0B\u201D{0}\u201C\u7684\u5B58\u50A8\u5939
-disclaimer.file.invalid=\u7531\u4E8E\u76F8\u5173\u6587\u4EF6{0}\u4E0D\u518D\u6709\u6548\uFF0C\u67D0\u4E9B\u4FE1\u606F\u4E0D\u80FD\u663E\u793A\u3002\u8BF7\u4E0E\u60A8\u7684\u5B66\u7A0B\u7BA1\u7406\u5458\u8054\u7CFB\u3002
-error.entry.locked=\u6B64\u523B\uFF0C\u7528\u6237{0}\u6B63\u5728\u88AB\u7F16\u8F91\u60A8\u9009\u62E9\u7684\u5B66\u4E60\u8D44\u6E90\uFF0C\u8BF7\u9009\u62E9\u5176\u4ED6\u7684\u5B66\u4E60\u8D44\u6E90\u6216\u7A0D\u540E\u518D\u8BD5\u3002
-error.self.undefined.long=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u81EA\u6D4B\uFF0C\u8BF7\u4E8E"\u81EA\u6D4B\u914D\u7F6E"\u4E2D\u9009\u62E9\u4E00\u4E2A\u81EA\u6D4B\u3002
-error.self.undefined.short=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u81EA\u6D4B
-error.surv.undefined.long=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u95EE\u5377\uFF0C\u8BF7\u4E8E\u201C\u95EE\u5377\u914D\u7F6E\u201D\u4E2D\u9009\u62E9\u4E00\u4E2A\u95EE\u5377\u3002
-error.surv.undefined.short=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u95EE\u5377
-error.test.undefined.long=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u6D4B\u9A8C\uFF0C\u8BF7\u4E8E"\u6D4B\u9A8C\u914D\u7F6E"\u4E2D\u9009\u62E9\u4E00\u4E2A\u3002
-error.test.undefined.short=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u6D4B\u9A8C
-fieldset.allowRelativeLinksForm=\u5B89\u5168\u8BBE\u7F6E
-fieldset.chosecreateeditfile=\u7B80\u4ECB\u4FE1\u606F(HTML\u9875\u9762)
-file.name=\u5DF2\u9009\u7684\u6587\u4EF6
-grade.nobody=\u6CA1\u6709\u8981\u66F4\u6B63\u7684\u6210\u7EE9\u3002
-info.assessment=\u8BE5\u5B66\u7A0B\u7684\u7BA1\u7406\u5458\u548C\u6559\u5E08\u80FD\u770B\u5230\u60A8\u7684\u6D4B\u9A8C\u6210\u7EE9\u5355\uFF0C\u6D4B\u9A8C\u5F97\u5206\u53EF\u6839\u636E\u5B66\u7A0B\u5404\u5143\u7D20\u7684\u6743\u91CD\u8FDB\u884C\u8BA1\u7B97\u3002
-info.nodedelete=\u8BE5\u5B66\u7A0B\u8282\u70B9\u7684\u6240\u6709\u7528\u6237\u6570\u636E\u5C06\u88AB\u5F52\u6863\u5230\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u7684private/archive/[coursename]\u90E8\u5206\u4E2D\u3002
-info.selfassessment=\u81EA\u6D4B\u7684\u6210\u7EE9\u5355\u5C06<b>\u4E0D\u4F1A</b>\u88AB\u5B66\u7A0B\u7684\u7BA1\u7406\u5458\u548C\u6559\u5E08\u8BBF\u95EE\u3002
-info.survey=\u6B64\u8C03\u67E5\u95EE\u5377\u5C06\u88AB\u533F\u540D\u4FDD\u5B58\u3002
-info.survey.alreadydone=\u60A8\u5DF2\u5B8C\u6210\u8C03\u67E5\u95EE\u5377\u586B\u5199\uFF0C\u60A8\u53EA\u80FD\u586B\u5199\u4E00\u6B21\u3002\u611F\u8C22\u60A8\u7684\u652F\u6301\uFF01
-inform.users=\u901A\u77E5\u53C2\u52A0\u8005
-inform.users.body=\u4EB2\u7231\u7684\u5B66\u7A0B\u53C2\u52A0\u8005\uFF1A\r\n   \u60A8\u5DF2\u5B8C\u6210\u7684\u8003\u8BD5\u6216\u8C03\u67E5\u95EE\u5377\u5DF2\u88AB\u5B66\u7A0B\u7BA1\u7406\u5458\u4FEE\u6539\u8FC7\u3002\u8BE5\u8003\u8BD5/\u8C03\u67E5\u95EE\u5377\u5C5E\u4E8E\u4E0B\u9762\u7684\u5B66\u7A0B\uFF1A\r\n   {0}\r\n   \u94FE\u63A5\u5230\u76F8\u5173\u7684\u5B66\u7A0B\u548C\u8003\u8BD5/\u8C03\u67E5\u95EE\u5377\uFF1A\r\n   {2}\r\n   \u5F53\u60A8\u9047\u5230\u4EFB\u4F55\u95EE\u9898\uFF0C\u4E0D\u8981\u72B9\u8C6B\uFF0C\u8BF7\u4E0E\u60A8\u7684\u5B66\u7A0B\u7BA1\u7406\u5458\u53D6\u5F97\u8054\u7CFB\u3002 \r\n   {1}   O(\u2229_\u2229)O
-inform.users.no=\u62D2\u7EDD
-inform.users.subject=OLAT\uFF1A\u5B66\u7A0B{1}\u4E2D\u5BF9{0}\u8FDB\u884C\u4FEE\u6539
-inform.users.yes=\u63A5\u53D7
-label.points=\u5F97\u5206(\u5206\u6570)
-log.title=\u66F4\u6539\u65E5\u5FD7
-no.disc.chosen=<i>\u672A\u9009\u62E9\u6587\u4EF6</i>
-no.file.chosen=<b>\u672A\u9009\u62E9\u4EFB\u4F55\u6587\u4EF6</b>
-pane.tab.accessibility=\u8BBF\u95EE
-pane.tab.iqconfig.self=\u81EA\u6D4B\u914D\u7F6E
-pane.tab.iqconfig.surv=\u95EE\u5377\u914D\u7F6E
-pane.tab.iqconfig.test=\u6D4B\u9A8C\u914D\u7F6E
-passed.no=\u5931\u8D25
-passed.yes=\u5DF2\u901A\u8FC7
-passed.yourpassed=\u60A8\u7684\u72B6\u6001
-preview.points.set=\u4E3A\u9884\u89C8\u8BBE\u7F6E\u5206\u6570
-qti.form.attempts=\u6700\u591A\u56DE\u7B54\u95EE\u9898\u7684\u5C1D\u8BD5\u6B21\u6570
-qti.form.attempts.noLimit=\u65E0\u9650\u5236
-qti.form.date.end=\u76F4\u5230
-qti.form.date.error.endbeforebegin=\u60A8\u8BBE\u7F6E\u7684\u5F00\u59CB\u65E5\u671F\u5728\u7ED3\u675F\u65E5\u671F\u4E4B\u540E\u3002
-qti.form.date.error.format=\u9519\u8BEF\u7684\u65E5\u671F\u683C\u5F0F
-qti.form.date.start=\u4ECE
-qti.form.date.start.error.mandatory=\u8BF7\u81F3\u5C11\u8981\u8F93\u5165\u4E00\u4E2A\u5F00\u59CB\u65E5\u671F\u3002
-qti.form.enablecancel=\u5141\u8BB8\u53D6\u6D88
-qti.form.enablesuspend=\u5141\u8BB8\u6682\u505C
-qti.form.limit.attempts=\u9650\u5236\u7B54\u9898\u7684\u6B21\u6570
-qti.form.menudisplay=\u663E\u793A\u83DC\u5355\u5BFC\u822A
-qti.form.menuenable=\u5141\u8BB8\u83DC\u5355\u5BFC\u822A
-qti.form.menurender=\u83DC\u5355\u5E03\u5C40
-qti.form.menurender.allquestions=\u6240\u6709\u8BD5\u9898
-qti.form.menurender.sectionsonly=\u4EC5\u90E8\u5206\u7684\u6807\u9898
-qti.form.questionnaire.title=\u8C03\u67E5\u95EE\u5377
-qti.form.questionprogress=\u663E\u793A\u6B64\u6D4B\u9A8C\u4E2D\u8BD5\u9898\u7684\u6570\u76EE
-qti.form.questiontitle=\u663E\u793A\u8BD5\u9898\u6807\u9898
-qti.form.result.title=\u6210\u7EE9\u5355
-qti.form.results.onfinish=\u8BD5\u5377\u63D0\u4EA4\u4E4B\u540E\u663E\u793A\u6210\u7EE9\u5355
-qti.form.results.onhomepage=\u6D4B\u8BD5\u9996\u9875\u663E\u793A\u6210\u7EE9\u5355
-qti.form.scoreinfo=\u6D4B\u8BD5\u9996\u9875\u663E\u793A\u6D4B\u9A8C\u5F97\u5206
-qti.form.scoreprogress=\u663E\u793A\u6D4B\u9A8C\u5F97\u5206
-qti.form.selftest.title=\u81EA\u6211\u6D4B\u9A8C
-qti.form.sequence=\u8BD5\u9898\u96C6
-qti.form.sequence.item=\u6BCF\u9875\u663E\u793A\u4E00\u9898
-qti.form.sequence.section=\u6BCF\u9875\u663E\u793A\u4E00\u4E2A\u90E8\u5206
-qti.form.show.results=\u4F9D\u65E5\u671F\u663E\u793A
-qti.form.summary=\u6210\u7EE9\u5355\u6982\u89C8
-qti.form.summary.compact=\u7B80\u7565(\u65E0\u89E3\u7B54)
-qti.form.summary.detailed=\u8BE6\u7EC6(\u9644\u89E3\u7B54)
-qti.form.summary.none=\u65E0\u5FC5\u8981\u603B\u7ED3
-qti.form.summary.section=\u6458\u8981\u90E8\u5206(\u4E0D\u5305\u542B\u89E3\u7B54)
-qti.form.test.title=\u8003\u8BD5
-replace.wizard.next=\u4E0B\u4E00\u4E2A
-replace.wizard.nodetitle=\u5B66\u7A0B\u5143\u7D20\u7684\u6807\u9898
-replace.wizard.showfile=\u4E0B\u8F7D\u6210\u7EE9\u5355
-replace.wizard.title=\u66FF\u6362\u6D4B\u9A8C\u6216\u95EE\u5377
-replace.wizard.title.step1=\u9009\u62E9\u65B0\u7684\u5B66\u4E60\u8D44\u6E90
-replace.wizard.title.step2=\u6210\u7EE9\u5355\u4E0A\u7684\u4FE1\u606F
-replace.wizard.title.step3=\u901A\u77E5\u7528\u6237
-score.cut=\u53CA\u683C\u7EBF
-score.max=\u6700\u9AD8\u5206
-score.min=\u6700\u4F4E\u5206
-score.noscoreinfoyet=\u8FD8\u6CA1\u6709\u6210\u7EE9\u4FE1\u606F\u53EF\u663E\u793A
-score.title=\u5F97\u5206
-score.yourscore=\u60A8\u7684\u5F97\u5206
-selectfile=\u9009\u62E9\u6587\u4EF6
-showResults.detailed=\u6210\u7EE9\u5355
-showResults.title=\u6210\u7EE9\u5355
-showResults.visibility=\u6309\u4ECE"{0}"\u5230"{1}"\u663E\u793A\u60A8\u7684\u6210\u7EE9\u5355\u3002
-start=\u5F00\u59CB
-validate.xml.signature=\u9A8C\u8BC1\u6D4B\u9A8C\u51ED\u636E
+choosenfile.self=\u81ea\u6d4b
+choosenfile.surv=\u95ee\u5377
+choosenfile.test=\u6d4b\u8bd5
+choosenlayout=\u5e03\u5c40\u53c2\u6570
+command.changeRepFile=\u66ff\u6362
+command.chooseRepFile=\u9009\u62e9\u3001\u521b\u5efa\u6216\u8005\u5bfc\u5165\u6587\u4ef6
+command.chooseSurvey=\u9009\u62e9\u95ee\u5377
+command.chooseTest=\u9009\u62e9\u6d4b\u8bd5
+command.closePreview=\u5173\u95ed\u9884\u89c8
+command.createSurvey=\u9009\u62e9\u3001\u521b\u5efa\u6216\u8005\u5bfc\u5165\u8c03\u67e5\u95ee\u5377
+command.editRepFile=\u7f16\u8f91
+command.hideResults=\u9690\u85cf\u6210\u7ee9
+command.preview=\u9884\u89c8
+command.showResults=\u663e\u793a\u6210\u7ee9
+comment.yourcomment=\u8f85\u5bfc\u8001\u5e08\u7684\u6279\u6ce8
+condition.accessibility.title=\u8bbf\u95ee
+correcttest=\u6b63\u786e\u7684\u6d4b\u8bd5
+coursefolder=\u8bfe\u7a0b\u201d{0}\u201c\u7684\u5b58\u50a8\u5939
+disclaimer.file.invalid=\u7531\u4e8e\u76f8\u5173\u6587\u4ef6{0}\u4e0d\u518d\u6709\u6548\uff0c\u67d0\u4e9b\u4fe1\u606f\u4e0d\u80fd\u663e\u793a\u3002\u8bf7\u4e0e\u60a8\u7684\u5b66\u7a0b\u7ba1\u7406\u5458\u8054\u7cfb\u3002
+error.entry.locked=\u6b64\u523b\uff0c\u7528\u6237{0}\u6b63\u5728\u88ab\u7f16\u8f91\u60a8\u9009\u62e9\u7684\u5b66\u4e60\u8d44\u6e90\uff0c\u8bf7\u9009\u62e9\u5176\u4ed6\u7684\u5b66\u4e60\u8d44\u6e90\u6216\u7a0d\u540e\u518d\u8bd5\u3002
+error.self.undefined.long=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u81ea\u6d4b\uff0c\u8bf7\u4e8e"\u81ea\u6d4b\u914d\u7f6e"\u4e2d\u9009\u62e9\u4e00\u4e2a\u81ea\u6d4b\u3002
+error.self.undefined.short=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u81ea\u6d4b
+error.surv.undefined.long=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u95ee\u5377\uff0c\u8bf7\u4e8e\u201c\u95ee\u5377\u914d\u7f6e\u201d\u4e2d\u9009\u62e9\u4e00\u4e2a\u95ee\u5377\u3002
+error.surv.undefined.short=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u95ee\u5377
+error.test.undefined.long=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u6d4b\u9a8c\uff0c\u8bf7\u4e8e"\u6d4b\u9a8c\u914d\u7f6e"\u4e2d\u9009\u62e9\u4e00\u4e2a\u3002
+error.test.undefined.short=\u6ca1\u6709\u4e3a"{0}"\u5b9a\u4e49\u6d4b\u9a8c
+fieldset.allowRelativeLinksForm=\u5b89\u5168\u8bbe\u7f6e
+fieldset.chosecreateeditfile=\u7b80\u4ecb\u4fe1\u606f(HTML\u9875\u9762)
+file.name=\u5df2\u9009\u7684\u6587\u4ef6
+grade.nobody=\u6ca1\u6709\u8981\u66f4\u6b63\u7684\u6210\u7ee9\u3002
+info.assessment=\u8be5\u5b66\u7a0b\u7684\u7ba1\u7406\u5458\u548c\u6559\u5e08\u80fd\u770b\u5230\u60a8\u7684\u6d4b\u9a8c\u6210\u7ee9\u5355\uff0c\u6d4b\u9a8c\u5f97\u5206\u53ef\u6839\u636e\u5b66\u7a0b\u5404\u5143\u7d20\u7684\u6743\u91cd\u8fdb\u884c\u8ba1\u7b97\u3002
+info.nodedelete=\u8be5\u5b66\u7a0b\u8282\u70b9\u7684\u6240\u6709\u7528\u6237\u6570\u636e\u5c06\u88ab\u5f52\u6863\u5230\u4e2a\u4eba\u6587\u4ef6\u5939\u4e2d\u7684private/archive/[coursename]\u90e8\u5206\u4e2d\u3002
+info.selfassessment=\u81ea\u6d4b\u7684\u6210\u7ee9\u5355\u5c06<b>\u4e0d\u4f1a</b>\u88ab\u5b66\u7a0b\u7684\u7ba1\u7406\u5458\u548c\u6559\u5e08\u8bbf\u95ee\u3002
+info.survey=\u6b64\u8c03\u67e5\u95ee\u5377\u5c06\u88ab\u533f\u540d\u4fdd\u5b58\u3002
+info.survey.alreadydone=\u60a8\u5df2\u5b8c\u6210\u8c03\u67e5\u95ee\u5377\u586b\u5199\uff0c\u60a8\u53ea\u80fd\u586b\u5199\u4e00\u6b21\u3002\u611f\u8c22\u60a8\u7684\u652f\u6301\uff01
+inform.users=\u901a\u77e5\u53c2\u52a0\u8005
+inform.users.body=\u4eb2\u7231\u7684\u5b66\u7a0b\u53c2\u52a0\u8005\uff1a\r\n   \u60a8\u5df2\u5b8c\u6210\u7684\u8003\u8bd5\u6216\u8c03\u67e5\u95ee\u5377\u5df2\u88ab\u5b66\u7a0b\u7ba1\u7406\u5458\u4fee\u6539\u8fc7\u3002\u8be5\u8003\u8bd5/\u8c03\u67e5\u95ee\u5377\u5c5e\u4e8e\u4e0b\u9762\u7684\u5b66\u7a0b\uff1a\r\n   {0}\r\n   \u94fe\u63a5\u5230\u76f8\u5173\u7684\u5b66\u7a0b\u548c\u8003\u8bd5/\u8c03\u67e5\u95ee\u5377\uff1a\r\n   {2}\r\n   \u5f53\u60a8\u9047\u5230\u4efb\u4f55\u95ee\u9898\uff0c\u4e0d\u8981\u72b9\u8c6b\uff0c\u8bf7\u4e0e\u60a8\u7684\u5b66\u7a0b\u7ba1\u7406\u5458\u53d6\u5f97\u8054\u7cfb\u3002 \r\n   {1}   O(\u2229_\u2229)O
+inform.users.no=\u62d2\u7edd
+inform.users.subject=OLAT\uff1a\u5b66\u7a0b{1}\u4e2d\u5bf9{0}\u8fdb\u884c\u4fee\u6539
+inform.users.yes=\u63a5\u53d7
+label.points=\u5f97\u5206(\u5206\u6570)
+log.title=\u66f4\u6539\u65e5\u5fd7
+no.disc.chosen=<i>\u672a\u9009\u62e9\u6587\u4ef6</i>
+no.file.chosen=<b>\u672a\u9009\u62e9\u4efb\u4f55\u6587\u4ef6</b>
+pane.tab.accessibility=\u8bbf\u95ee
+pane.tab.iqconfig.self=\u81ea\u6d4b\u914d\u7f6e
+pane.tab.iqconfig.surv=\u95ee\u5377\u914d\u7f6e
+pane.tab.iqconfig.test=\u6d4b\u9a8c\u914d\u7f6e
+passed.no=\u5931\u8d25
+passed.yes=\u5df2\u901a\u8fc7
+passed.yourpassed=\u60a8\u7684\u72b6\u6001
+preview.points.set=\u4e3a\u9884\u89c8\u8bbe\u7f6e\u5206\u6570
+qti.form.attempts=\u6700\u591a\u56de\u7b54\u95ee\u9898\u7684\u5c1d\u8bd5\u6b21\u6570
+qti.form.attempts.noLimit=\u65e0\u9650\u5236
+qti.form.date.end=\u76f4\u5230
+qti.form.date.error.endbeforebegin=\u60a8\u8bbe\u7f6e\u7684\u5f00\u59cb\u65e5\u671f\u5728\u7ed3\u675f\u65e5\u671f\u4e4b\u540e\u3002
+qti.form.date.error.format=\u9519\u8bef\u7684\u65e5\u671f\u683c\u5f0f
+qti.form.date.start=\u4ece
+qti.form.date.start.error.mandatory=\u8bf7\u81f3\u5c11\u8981\u8f93\u5165\u4e00\u4e2a\u5f00\u59cb\u65e5\u671f\u3002
+qti.form.enablecancel=\u5141\u8bb8\u53d6\u6d88
+qti.form.enablesuspend=\u5141\u8bb8\u6682\u505c
+qti.form.limit.attempts=\u9650\u5236\u7b54\u9898\u7684\u6b21\u6570
+qti.form.menudisplay=\u663e\u793a\u83dc\u5355\u5bfc\u822a
+qti.form.menuenable=\u5141\u8bb8\u83dc\u5355\u5bfc\u822a
+qti.form.menurender=\u83dc\u5355\u5e03\u5c40
+qti.form.menurender.allquestions=\u6240\u6709\u8bd5\u9898
+qti.form.menurender.sectionsonly=\u4ec5\u90e8\u5206\u7684\u6807\u9898
+qti.form.questionnaire.title=\u8c03\u67e5\u95ee\u5377
+qti.form.questionprogress=\u663e\u793a\u6b64\u6d4b\u9a8c\u4e2d\u8bd5\u9898\u7684\u6570\u76ee
+qti.form.questiontitle=\u663e\u793a\u8bd5\u9898\u6807\u9898
+qti.form.result.title=\u6210\u7ee9\u5355
+qti.form.results.onfinish=\u8bd5\u5377\u63d0\u4ea4\u4e4b\u540e\u663e\u793a\u6210\u7ee9\u5355
+qti.form.results.onhomepage=\u6d4b\u8bd5\u9996\u9875\u663e\u793a\u6210\u7ee9\u5355
+qti.form.scoreinfo=\u6d4b\u8bd5\u9996\u9875\u663e\u793a\u6d4b\u9a8c\u5f97\u5206
+qti.form.scoreprogress=\u663e\u793a\u6d4b\u9a8c\u5f97\u5206
+qti.form.selftest.title=\u81ea\u6211\u6d4b\u9a8c
+qti.form.sequence=\u8bd5\u9898\u96c6
+qti.form.sequence.item=\u6bcf\u9875\u663e\u793a\u4e00\u9898
+qti.form.sequence.section=\u6bcf\u9875\u663e\u793a\u4e00\u4e2a\u90e8\u5206
+qti.form.show.results=\u4f9d\u65e5\u671f\u663e\u793a
+qti.form.summary=\u6210\u7ee9\u5355\u6982\u89c8
+qti.form.summary.compact=\u7b80\u7565(\u65e0\u89e3\u7b54)
+qti.form.summary.detailed=\u8be6\u7ec6(\u9644\u89e3\u7b54)
+qti.form.summary.none=\u65e0\u5fc5\u8981\u603b\u7ed3
+qti.form.summary.section=\u6458\u8981\u90e8\u5206(\u4e0d\u5305\u542b\u89e3\u7b54)
+qti.form.test.title=\u8003\u8bd5
+replace.wizard.next=\u4e0b\u4e00\u4e2a
+replace.wizard.nodetitle=\u5b66\u7a0b\u5143\u7d20\u7684\u6807\u9898
+replace.wizard.showfile=\u4e0b\u8f7d\u6210\u7ee9\u5355
+replace.wizard.title=\u66ff\u6362\u6d4b\u9a8c\u6216\u95ee\u5377
+replace.wizard.title.step1=\u9009\u62e9\u65b0\u7684\u5b66\u4e60\u8d44\u6e90
+replace.wizard.title.step2=\u6210\u7ee9\u5355\u4e0a\u7684\u4fe1\u606f
+replace.wizard.title.step3=\u901a\u77e5\u7528\u6237
+score.cut=\u53ca\u683c\u7ebf
+score.max=\u6700\u9ad8\u5206
+score.min=\u6700\u4f4e\u5206
+score.noscoreinfoyet=\u8fd8\u6ca1\u6709\u6210\u7ee9\u4fe1\u606f\u53ef\u663e\u793a
+score.title=\u5f97\u5206
+score.yourscore=\u60a8\u7684\u5f97\u5206
+selectfile=\u9009\u62e9\u6587\u4ef6
+showResults.detailed=\u6210\u7ee9\u5355
+showResults.title=\u6210\u7ee9\u5355
+showResults.visibility=\u6309\u4ece"{0}"\u5230"{1}"\u663e\u793a\u60a8\u7684\u6210\u7ee9\u5355\u3002
+start=\u5f00\u59cb
+validate.xml.signature=\u9a8c\u8bc1\u6d4b\u9a8c\u51ed\u636e
