--- a/src/main/java/org/olat/home/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/home/_i18n/LocalStrings_zh_CN.properties
@@ -1,45 +1,47 @@
 #Thu Sep 03 11:24:43 CEST 2015
-command.portal.back=\u7ED3\u675F\u8BBE\u5B9A
-command.portal.edit=\u672C\u9875\u8BBE\u5B9A
-email.disabled=\u60A8\u7684\u7535\u5B50\u90AE\u4EF6\u5730\u5740\u5DF2\u88AB\u7528\u6237\u7BA1\u7406\u5458\u53D6\u6D88\u3002\u60A8\u4E0D\u80FD\u901A\u8FC7OLAT\u63A5\u53D7\u4EFB\u4F55\u7535\u5B50\u90AE\u4EF6\uFF0C\u8981\u91CD\u65B0\u4F7F\u7528\u7535\u5B50\u90AE\u4EF6\uFF0C\u8BF7\u5230 \u9996\u9875->\u6211\u7684\u4E2A\u4EBA\u8D44\u6599 \u91CD\u65B0\u8BBE\u5B9A\u4E00\u4E2A\u65B0\u7684\u7535\u5B50\u90AE\u4EF6\u5730\u5740\u3002
-guestinfo.header=\u4FE1 \u606F
-guestinfo.message=\u4EE5\u6E38\u5BA2\u8EAB\u4EFD\u767B\u5F55\u53EF\u4EE5\u8BA9\u4F60\u4F53\u9A8COLAT\u5185\u90E8\u7684\u90E8\u5206\u529F\u80FD\u3002.<br><br>\u4F60\u53EA\u80FD\u8BBF\u95EE\u4E3A\u6E38\u5BA2\u5F00\u653E\u7684\u5B66\u4E60\u8D44\u6E90\u3002<br><br> \u60F3\u8981\u83B7\u5F97\u66F4\u591A\u7684\u5B66\u4E60\u8D44\u6E90\uFF0C\u8BF7\u6CE8\u518C\u3002
-guestwelcome.header=\u6B22\u8FCE\u6765\u5230OpenOLAT\u4E16\u754C
-guestwelcome.message=\u6B22\u8FCE\u6765\u5230OpenOLAT\u5B66\u4E60\u4E0E\u5185\u5BB9\u7BA1\u7406\u7CFB\u7EDF\u3002\u795D\u4F60\u80FD\u591F\u6109\u5FEB\u5730\u4EAB\u53D7\u7F51\u7EDC\u5B66\u4E60\u5E26\u6765\u7684\u4E50\u8DA3\uFF01
-guestwelcome.quicklink=\u8BF7\u4F7F\u7528<a href\="{0}">\u5B66\u4E60\u8D44\u6E90</a>\u6765\u8BBF\u95EE\u5B66\u4E60\u5185\u5BB9\u3002 
+menu.course=\u8bfe\u7a0b
+menu.course.alt=\u8bfe\u7a0b
+command.portal.back=\u7ed3\u675f\u8bbe\u5b9a
+command.portal.edit=\u672c\u9875\u8bbe\u5b9a
+email.disabled=\u60a8\u7684\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u5df2\u88ab\u7528\u6237\u7ba1\u7406\u5458\u53d6\u6d88\u3002\u60a8\u4e0d\u80fd\u901a\u8fc7OLAT\u63a5\u53d7\u4efb\u4f55\u7535\u5b50\u90ae\u4ef6\uff0c\u8981\u91cd\u65b0\u4f7f\u7528\u7535\u5b50\u90ae\u4ef6\uff0c\u8bf7\u5230 \u9996\u9875->\u6211\u7684\u4e2a\u4eba\u8d44\u6599 \u91cd\u65b0\u8bbe\u5b9a\u4e00\u4e2a\u65b0\u7684\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002
+guestinfo.header=\u4fe1 \u606f
+guestinfo.message=\u4ee5\u6e38\u5ba2\u8eab\u4efd\u767b\u5f55\u53ef\u4ee5\u8ba9\u4f60\u4f53\u9a8cOLAT\u5185\u90e8\u7684\u90e8\u5206\u529f\u80fd\u3002.<br><br>\u4f60\u53ea\u80fd\u8bbf\u95ee\u4e3a\u6e38\u5ba2\u5f00\u653e\u7684\u5b66\u4e60\u8d44\u6e90\u3002<br><br> \u60f3\u8981\u83b7\u5f97\u66f4\u591a\u7684\u5b66\u4e60\u8d44\u6e90\uff0c\u8bf7\u6ce8\u518c\u3002
+guestwelcome.header=\u6b22\u8fce\u6765\u5230OpenOLAT\u4e16\u754c
+guestwelcome.message=\u6b22\u8fce\u6765\u5230OpenOLAT\u5b66\u4e60\u4e0e\u5185\u5bb9\u7ba1\u7406\u7cfb\u7edf\u3002\u795d\u4f60\u80fd\u591f\u6109\u5feb\u5730\u4eab\u53d7\u7f51\u7edc\u5b66\u4e60\u5e26\u6765\u7684\u4e50\u8da3\uff01
+guestwelcome.quicklink=\u8bf7\u4f7f\u7528<a href\="{0}">\u5b66\u4e60\u8d44\u6e90</a>\u6765\u8bbf\u95ee\u5b66\u4e60\u5185\u5bb9\u3002 
 main.menu.title=\u9996 \u9875
-main.menu.title.alt=\u4F60\u7684OLAT\u4E2A\u4EBA\u4E3B\u9875
-menu.bc=\u4E2A\u4EBA\u6587\u4EF6\u5939
-menu.bc.alt=\u4E2A\u4EBA\u6587\u4EF6\u5939
-menu.bc.component={0}\u7684\u4E2A\u4EBA\u6587\u4EF6\u5939
-menu.calendar=\u65E5  \u5386
-menu.calendar.alt=\u6211\u7684\u4E2A\u4EBA\u65E5\u5386
-menu.efficiencyStatements=\u6210\u7EE9\u5355
-menu.efficiencyStatements.alt=\u6240\u6709\u7684\u6210\u7EE9\u5355
-menu.fulltextsearch=\u5168\u6587\u641C\u7D22
-menu.fulltextsearch.alt=\u5728OLAT\u4E2D\u8FDB\u884C\u5168\u6587\u641C\u7D22
-menu.guest=\u6E38\u5BA2\u9996\u9875
-menu.guest.alt=\u6E38\u5BA2\u7528\u6237\u9996\u9875
-menu.guestinfo=\u4FE1 \u606F
-menu.guestinfo.alt=\u5982\u4F55\u4F7F\u7528OLAT\u7684\u4FE1\u606F
-menu.guestwelcome=\u6B22\u8FCE\u5149\u4E34
-menu.guestwelcome.alt=\u6B22\u8FCE\u6765\u5230OLAT\u4E16\u754C
-menu.mysettings=\u8BBE \u7F6E
-menu.mysettings.alt=\u6211\u4E2A\u4EBA\u7684OLAT\u8BBE\u7F6E
-menu.note=\u7B14 \u8BB0
-menu.note.alt=\u6211\u7684\u7B14\u8BB0
-menu.notifications=\u8BA2 \u9605
-menu.notifications.alt=\u7BA1\u7406\u6211\u7684\u901A\u77E5\u548C\u8BA2\u9605
-menu.otherusers=\u5176\u4ED6\u7528\u6237
-menu.otherusers.alt=\u5176\u4ED6\u7528\u6237\u7684\u540D\u7247
-menu.portfolio.myartefacts=\u6211\u7684\u7535\u5B50\u6863\u6848
-menu.portfolio.myartefacts.alt=\u663E\u793A\u5E76\u7BA1\u7406\u6240\u6709\u7684\u7535\u5B50\u6863\u6848
-menu.portfolio.mymaps=\u6211\u7684\u5F62\u6210\u6027\u6587\u4EF6\u5939
-menu.portfolio.mymaps.alt=\u663E\u793A\u5E76\u7BA1\u7406\u6211\u6240\u6709\u7684\u5F62\u6210\u6027\u6587\u4EF6\u5939
-menu.portfolio.mystructuredmaps=\u6211\u7684\u7535\u5B50\u6863\u6848\u4EFB\u52A1
-menu.portfolio.mystructuredmaps.alt=\u663E\u793A\u5E76\u7BA1\u7406\u6211\u6240\u6709\u7535\u5B50\u6863\u6848\u4EFB\u52A1\u7684\u5F62\u6210\u6027\u6587\u4EF6\u5939
-menu.portfolio.othermaps=\u91CA\u653E\u7684\u5F62\u6210\u6027\u6587\u4EF6\u5939
-warn.session.was.killed=\u76EE\u524D\u60A8\u6B63\u5728\u7528\u53E6\u4E00\u6D4F\u89C8\u5668\u8BBF\u95EEOLAT\uFF0C\u60A8\u4E0D\u80FD\u540C\u4E00\u65F6\u523B\u591A\u6B21\u767B\u9646\uFF0E\u56E0\u6B64\u4E4B\u524D\u7684\u64CD\u4F5C\u5DF2\u88AB\u7EC8\u6B62\u3002
-welcome.header=\u6B22\u8FCE\u6765\u5230OpenOLAT\u4E16\u754C
-welcome.intro=OLAT--\u7B80\u4F53\u4E2D\u6587\u7248
-welcome.rss=\u9605\u8BFB\u60A8\u4E2A\u4EBA\u7684RSS\u901A\u77E5
+main.menu.title.alt=\u4f60\u7684OLAT\u4e2a\u4eba\u4e3b\u9875
+menu.bc=\u4e2a\u4eba\u6587\u4ef6\u5939
+menu.bc.alt=\u4e2a\u4eba\u6587\u4ef6\u5939
+menu.bc.component={0}\u7684\u4e2a\u4eba\u6587\u4ef6\u5939
+menu.calendar=\u65e5  \u5386
+menu.calendar.alt=\u6211\u7684\u4e2a\u4eba\u65e5\u5386
+menu.efficiencyStatements=\u6210\u7ee9\u5355
+menu.efficiencyStatements.alt=\u6240\u6709\u7684\u6210\u7ee9\u5355
+menu.fulltextsearch=\u5168\u6587\u641c\u7d22
+menu.fulltextsearch.alt=\u5728OLAT\u4e2d\u8fdb\u884c\u5168\u6587\u641c\u7d22
+menu.guest=\u6e38\u5ba2\u9996\u9875
+menu.guest.alt=\u6e38\u5ba2\u7528\u6237\u9996\u9875
+menu.guestinfo=\u4fe1 \u606f
+menu.guestinfo.alt=\u5982\u4f55\u4f7f\u7528OLAT\u7684\u4fe1\u606f
+menu.guestwelcome=\u6b22\u8fce\u5149\u4e34
+menu.guestwelcome.alt=\u6b22\u8fce\u6765\u5230OLAT\u4e16\u754c
+menu.mysettings=\u8bbe \u7f6e
+menu.mysettings.alt=\u6211\u4e2a\u4eba\u7684OLAT\u8bbe\u7f6e
+menu.note=\u7b14 \u8bb0
+menu.note.alt=\u6211\u7684\u7b14\u8bb0
+menu.notifications=\u8ba2 \u9605
+menu.notifications.alt=\u7ba1\u7406\u6211\u7684\u901a\u77e5\u548c\u8ba2\u9605
+menu.otherusers=\u5176\u4ed6\u7528\u6237
+menu.otherusers.alt=\u5176\u4ed6\u7528\u6237\u7684\u540d\u7247
+menu.portfolio.myartefacts=\u6211\u7684\u7535\u5b50\u6863\u6848
+menu.portfolio.myartefacts.alt=\u663e\u793a\u5e76\u7ba1\u7406\u6240\u6709\u7684\u7535\u5b50\u6863\u6848
+menu.portfolio.mymaps=\u6211\u7684\u5f62\u6210\u6027\u6587\u4ef6\u5939
+menu.portfolio.mymaps.alt=\u663e\u793a\u5e76\u7ba1\u7406\u6211\u6240\u6709\u7684\u5f62\u6210\u6027\u6587\u4ef6\u5939
+menu.portfolio.mystructuredmaps=\u6211\u7684\u7535\u5b50\u6863\u6848\u4efb\u52a1
+menu.portfolio.mystructuredmaps.alt=\u663e\u793a\u5e76\u7ba1\u7406\u6211\u6240\u6709\u7535\u5b50\u6863\u6848\u4efb\u52a1\u7684\u5f62\u6210\u6027\u6587\u4ef6\u5939
+menu.portfolio.othermaps=\u91ca\u653e\u7684\u5f62\u6210\u6027\u6587\u4ef6\u5939
+warn.session.was.killed=\u76ee\u524d\u60a8\u6b63\u5728\u7528\u53e6\u4e00\u6d4f\u89c8\u5668\u8bbf\u95eeOLAT\uff0c\u60a8\u4e0d\u80fd\u540c\u4e00\u65f6\u523b\u591a\u6b21\u767b\u9646\uff0e\u56e0\u6b64\u4e4b\u524d\u7684\u64cd\u4f5c\u5df2\u88ab\u7ec8\u6b62\u3002
+welcome.header=\u6b22\u8fce\u6765\u5230OpenOLAT\u4e16\u754c
+welcome.intro=OLAT--\u7b80\u4f53\u4e2d\u6587\u7248
+welcome.rss=\u9605\u8bfb\u60a8\u4e2a\u4eba\u7684RSS\u901a\u77e5
