--- a/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/assessment/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,23 +1,35 @@
 #Mon Mar 27 15:33:21 CEST 2017
-assessment.status.done=\u8BC4\u4F30
-assessment.status.inProgress=\u5F00\u59CB
-assessment.status.inReview=\u56DE\u987E
-assessment.status.notStart=\u672A\u5F00\u59CB
-assessment.tool.numOfAssessedGroups={0} \u4E2A\u7FA4\u7EC4
+waiting.review=\u5f85\u5ba1\u6838
+statistics.small.overview=\u7edf\u8ba1\u6982\u8ff0
+table.header.numOfParticipants=\u6ce8\u518c\u53c2\u52a0\u8005\u4eba\u6570
+table.header.numOfOtherUsers=\u672a\u6ce8\u518c\u7528\u6237\u6570\u91cf
+table.header.numOfInitialLaunch=\u81f3\u5c11\u6253\u5f00\u4e00\u6b21\u8d44\u6e90
+table.header.scoreAverage=\u5e73\u5747\u5206
+filter.passed=\u901a\u8fc7
+table.header.numOfPassed=\u901a\u8fc7
+table.header.passed=\u901a\u8fc7
+table.header.elements.toReview=\u68c0\u9605
+assessment.tool.assessable.items=\u53ef\u8bc4\u7a0e\u9879\u76ee\u4e00\u89c8\u8868
+index.introduction=\u4f7f\u7528\u8bc4\u4f30\u5de5\u5177\u8bc4\u4f30\u6b64\u5b66\u4e60\u8d44\u6e90\u7684\u53c2\u4e0e\u8005\u3002\u5b83\u5141\u8bb8\u60a8\u8bbf\u95ee\u548c\u4fee\u6539\u6d4b\u8bd5\u7ed3\u679c\u3002
+assessment.status.done=\u8bc4\u4f30
+assessment.status.inProgress=\u5f00\u59cb
+assessment.status.inReview=\u56de\u987e
+assessment.status.notStart=\u672a\u5f00\u59cb
+assessment.tool.numOfAssessedGroups={0} \u4e2a\u7fa4\u7ec4
 assessment.tool.numOfAssessedIdentities={0} \u7528\u6237
-assessment.tool.numOfFailed={0} \u4E2A\u5931\u8D25\u7528\u6237
-assessment.tool.numOfPassed={0}\u4E2A\u901A\u8FC7\u7528\u6237
-assessment.tool.overview=\u6982\u89C8
-assessment.tool.quick.links=\u5FEB\u901F\u94FE\u63A5
-command.next=\u8F6C\u5230\u4E0B\u4E2A\u7528\u6237
-command.previous=\u8F6C\u5230\u524D\u4E00\u4E2A\u7528\u6237
-filter=\u8FC7\u6EE4
-filter.anonymousUsers=\u533F\u540D\u7528\u6237
-filter.done=\u5DF2\u8BC4\u4F30
-filter.failed=\u672A\u901A\u8FC7
-filter.groups=\u7FA4\u7EC4
-filter.inProgress=\u5DF2\u5F00\u59CB
-filter.inReview=\u56DE\u987E
-filter.otherUsers=\u6240\u6709\u7528\u6237\uFF08\u5305\u62EC\u6240\u6709\u4EBA\u548C\u6559\u5E08\uFF09
-filter.passed=\u901A\u8FC7
+assessment.tool.numOfFailed={0} \u4e2a\u5931\u8d25\u7528\u6237
+assessment.tool.numOfPassed={0}\u4e2a\u901a\u8fc7\u7528\u6237
+assessment.tool.overview=\u6982\u89c8
+assessment.tool.quick.links=\u5feb\u901f\u94fe\u63a5
+command.next=\u8f6c\u5230\u4e0b\u4e2a\u7528\u6237
+command.previous=\u8f6c\u5230\u524d\u4e00\u4e2a\u7528\u6237
+filter=\u8fc7\u6ee4
+filter.anonymousUsers=\u533f\u540d\u7528\u6237
+filter.done=\u5df2\u8bc4\u4f30
+filter.failed=\u672a\u901a\u8fc7
+filter.groups=\u7fa4\u7ec4
+filter.inProgress=\u5df2\u5f00\u59cb
+filter.inReview=\u56de\u987e
+filter.otherUsers=\u6240\u6709\u7528\u6237\uff08\u5305\u62ec\u6240\u6709\u4eba\u548c\u6559\u5e08\uff09
+filter.passed=\u901a\u8fc7
 table.header.tools=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
