--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -1,4 +1,17 @@
 #Sun Mar 19 10:15:41 CET 2017
+cif.owned.resources.usage.used=\u5f15\u7528
+cif.owned.resources.usage=\u5f15\u7528\u53c2\u8003\u8d44\u6599
+cif.owned.resources.usage.notUsed=\u975e\u5f15\u7528
+cif.owned.resources.only=\u6211\u7684\u8bfe\u7a0b
+cif.owned.resources.usage=\u5f15\u7528\u7684\u8d44\u6e90
+references=\u5f15\u7528\u7684\u8d44\u6e90
+cif.membership.mandatory=\u6211\u7684\u8bfe\u7a0b
+search.mycourses.student=\u6211\u7684\u8bfe\u7a0b
+
+details.bookmark.remove=\u5220\u9664\u4e66\u7b7e
+search.curriculums=\u8bfe\u7a0b
+details=\u4fe1\u606f\u9875\u9762
+comments=\u8bc4\u8bba
 read.only.header=\u7ed3\u675f\u8bfe\u7a0b
 details.delete.acknowledge=\u786e\u8ba4
 details.read.only.acknowledge=\u786e\u8ba4
@@ -43,7 +56,7 @@ details.bookmark.label=\u4e66\u7b7e
 details.overview=\u7efc\u8ff0
 table.header.deletedby=\u5220\u9664\u8005
 table.header.deletiondate=\u5220\u9664\u65e5\u671f
-cif.status.trash=\u5783\u573e
+cif.status.trash=\u5df2\u5220\u9664
 table.status.trash=$\:cif.status.trash
 
 
@@ -73,14 +86,6 @@ FileResource.SURVEY= \u8c03\u67e5\u95ee\u5377 Questionnaire
 search.survey= \u8c03\u67e5\u95ee\u5377  Questionnaires
 tools.add.survey= \u8c03\u67e5\u95ee\u5377  Questionnaire
 tools.new.createsurvey= \u8c03\u67e5\u95ee\u5377  Questionnaire
-
-
-FileResource.FORM=Fragebogen
-FileResource.SURVEY=Fragebogen
-search.survey=Fragebogen
-tools.add.survey=Fragebogen
-tools.new.createsurvey=Fragebogen
-
 
 
 cif.externalref=\u53c2\u8003
@@ -197,7 +202,6 @@ cif.resources.status.all=\u5168\u90e8
 status.opened=\u53ef\u7528
 table.status.closed=$\:status.closed
 change.to.close=\u5df2\u7ed3\u675f
-search.courses.closed=\u5df2\u7ed3\u675f
 status.closed=\u5df2\u7ed3\u675f
 cmd.import.ressource.desc=\u9009\u62e9\u4e00\u4e2a\u5b66\u4e60\u8d44\u6e90\u5bfc\u5165\:<ul><li>OpenOLAT\u683c\u5f0f\: \u8bfe\u7a0b\uff0c\u8d44\u6e90\u6587\u4ef6\u5939\uff0c\u672f\u8bed\u8868\uff0c\u7ef4\u57fa\uff0c\u64ad\u5ba2\uff0c\u535a\u5ba2\uff0c\u89c6\u9891\u7ec4\u5408\uff0c\u6a21\u677f</li><li>MP4</li><li>\u6807\u51c6\u683c\u5f0f\:  IMS\u5185\u5bb9\u5305\u88c5\u3001IMS QTI\u8bc4\u4f30\u6216\u8c03\u67e5\uff0cSCORM 1.2</li><li>\u6587\u4ef6\: \u4efb\u610f</li></ul> 
 import.file=\u5bfc\u5165\u6587\u4ef6
@@ -482,7 +486,6 @@ scorm.no.scorm.namespace=\u65e0\u6cd5\u6dfb\u52a0SCORM\u5b66\u4e60\u8d44\u6e90\u
 search.blog=\u535a\u5ba2
 search.catalog=\u76ee\u5f55
 search.course=\u8bfe\u7a0b
-search.courses.closed=\u5df2\u5173\u95ed\u7684\u8bfe\u7a0b
 search.courses.student=\u641c\u7d22
 search.cp=CP\u8bfe\u4ef6
 search.deleted=\u5df2\u5220\u9664
