--- a/src/main/java/org/olat/user/ui/admin/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/user/ui/admin/_i18n/LocalStrings_zh_CN.properties
@@ -1,48 +1,68 @@
 #Fri Mar 23 15:13:55 CET 2018
-menu.anonymousgroup=\u533F\u540D\u7528\u6237/\u6E38\u5BA2
-menu.anonymousgroup.alt=\u5BF9\u533F\u540D\u7528\u6237(\u6E38\u5BA2)\u8FDB\u884C\u7BA1\u7406
-menu.authorgroup=\u521B\u5EFA\u4EBA
-menu.authorgroup.alt=\u5BF9\u521B\u5EFA\u4EBA\u7EC4\u8FDB\u884C\u7BA1\u7406
-menu.coauthors=\u5408\u4F5C\u8005
-menu.coauthors.alt=\u7BA1\u7406\u975E\u4F5C\u8005\u7EC4\u7684\u5408\u4F5C\u8005
-menu.created.lastmonth=\u6700\u8FD1\u4E00\u4E2A\u6708\u65B0\u589E
-menu.created.lastmonth.alt=\u6700\u8FD1\u56DB\u5468\u65B0\u589E\u52A0\u7684\u7528\u6237
-menu.created.lastweek=\u6700\u8FD1\u4E00\u5468\u65B0\u589E
-menu.created.lastweek.alt=\u6700\u8FD1\u4E00\u5468\u65B0\u589E\u52A0\u7684\u7528\u6237
-menu.created.newUsersNotification=\u65B0\u7528\u6237
-menu.created.newUsersNotification.alt=\u65B0\u7528\u6237
-menu.created.sixmonth=\u6700\u8FD1\u534A\u5E74\u65B0\u589E
-menu.created.sixmonth.alt=\u6700\u8FD1\u534A\u5E74\u5185\u65B0\u589E\u52A0\u7684\u7528\u6237
-menu.deletedusers=\u5DF2\u88AB\u5220\u9664\u7684\u7528\u6237
-menu.deletedusers.alt=\u5728OpenOLAT\u7CFB\u7EDF\u88AB\u5220\u9664\u7684\u7528\u6237
-menu.groupmanagergroup=\u7FA4\u7EC4\u7BA1\u7406\u5458
-menu.groupmanagergroup.alt=\u5BF9\u7EFC\u5408\u7BA1\u7406\u7FA4\u7EC4\u7BA1\u7406\u5458\u7684\u7BA1\u7406
-menu.logondeniedgroup=\u88AB\u9501\u4F4F\u7684\u7528\u6237
-menu.logondeniedgroup.alt=\u4E0D\u80FD\u767B\u5F55OpenOLAT\u7684\u7528\u6237
-menu.menuaccess=\u8BBF\u95EE\u53CA\u6743\u9650
-menu.menuaccess.alt=\u7BA1\u7406\u7528\u6237\u7684\u8BBF\u95EE\u548C\u6743\u9650
-menu.menuqueries=\u9884\u8BBE\u641C\u7D22
-menu.menuqueries.alt=\u6839\u636E\u9884\u8BBE\u641C\u7D22\u6765\u7BA1\u7406\u7528\u6237
-menu.noauthentication=\u8BA4\u8BC1\u4FE1\u606F\u4E0D\u5B8C\u6574
-menu.noauthentication.alt=\u4FE1\u606F\u4E0D\u5B8C\u6574\u7684\u7528\u6237[\u65E0\u5BC6\u7801]
-menu.resourceowners=\u4F5C\u8005\u53CA\u5408\u4F5C\u8005
-menu.resourceowners.alt=\u5B66\u4E60\u8D44\u6E90\u6240\u6709\u8005\u7BA1\u7406
-menu.ucreate=\u521B\u5EFA\u7528\u6237
-menu.ucreate.alt=\u521B\u5EFA\u7528\u6237
-menu.usearch=\u641C\u7D22\u7528\u6237
-menu.usearch.alt=\u641C\u7D22\u7528\u6237
-menu.useradmin=\u7528\u6237\u7BA1\u7406
-menu.useradmin.alt=\u7528\u6237\u53CA\u7CFB\u7EDF\u89D2\u8272\u7BA1\u7406
+
+menu.users.email.duplicate=\u7528\u6237\u7535\u5b50\u90ae\u4ef6\u526f\u672c
+menu.users.email.duplicate.alt=\u7528\u6237\u7535\u5b50\u90ae\u4ef6\u526f\u672c
+
+menu.users.without.email=\u6ca1\u6709\u7535\u5b50\u90ae\u4ef6\u7684\u7528\u6237
+menu.users.without.email.alt=\u6ca1\u6709\u7535\u5b50\u90ae\u4ef6\u7684\u7528\u6237
+menu.coursecoach=\u8bfe\u7a0b\u6559\u5458
+menu.organisations=\u7ec4\u7ec7
+menu.organisations.alt=\u7ec4\u7ec7
+
+organisations.intro=\u7ec4\u7ec7\u662f\u4e00\u4e2a\u5f3a\u5927\u7684\u7279\u6027\u3002
+
+
+menu.sysadmingroup=\u7cfb\u7edf\u7ba1\u7406\u5458
+menu.admingroup=\u7ba1\u7406\u5458
+
+
+menu.pendinggroup=\u5f85\u5b9a\u7528\u6237
+menu.groupcoach=\u7ec4\u6559\u5458
+menu.courseparticipants=\u8bfe\u7a0b\u53c2\u4e0e\u8005
+menu.anonymousgroup=\u533f\u540d\u7528\u6237/\u6e38\u5ba2
+menu.anonymousgroup.alt=\u5bf9\u533f\u540d\u7528\u6237(\u6e38\u5ba2)\u8fdb\u884c\u7ba1\u7406
+menu.authorgroup=\u521b\u5efa\u4eba
+menu.authorgroup.alt=\u5bf9\u521b\u5efa\u4eba\u7ec4\u8fdb\u884c\u7ba1\u7406
+menu.coauthors=\u5408\u4f5c\u8005
+menu.coauthors.alt=\u7ba1\u7406\u975e\u4f5c\u8005\u7ec4\u7684\u5408\u4f5c\u8005
+menu.created.lastmonth=\u6700\u8fd1\u4e00\u4e2a\u6708\u65b0\u589e
+menu.created.lastmonth.alt=\u6700\u8fd1\u56db\u5468\u65b0\u589e\u52a0\u7684\u7528\u6237
+menu.created.lastweek=\u6700\u8fd1\u4e00\u5468\u65b0\u589e
+menu.created.lastweek.alt=\u6700\u8fd1\u4e00\u5468\u65b0\u589e\u52a0\u7684\u7528\u6237
+menu.created.newUsersNotification=\u65b0\u7528\u6237
+menu.created.newUsersNotification.alt=\u65b0\u7528\u6237
+menu.created.sixmonth=\u6700\u8fd1\u534a\u5e74\u65b0\u589e
+menu.created.sixmonth.alt=\u6700\u8fd1\u534a\u5e74\u5185\u65b0\u589e\u52a0\u7684\u7528\u6237
+menu.deletedusers=\u5df2\u88ab\u5220\u9664\u7684\u7528\u6237
+menu.deletedusers.alt=\u5728OpenOLAT\u7cfb\u7edf\u88ab\u5220\u9664\u7684\u7528\u6237
+menu.groupmanagergroup=\u7fa4\u7ec4\u7ba1\u7406\u5458
+menu.groupmanagergroup.alt=\u5bf9\u7efc\u5408\u7ba1\u7406\u7fa4\u7ec4\u7ba1\u7406\u5458\u7684\u7ba1\u7406
+menu.logondeniedgroup=\u88ab\u9501\u4f4f\u7684\u7528\u6237
+menu.logondeniedgroup.alt=\u4e0d\u80fd\u767b\u5f55OpenOLAT\u7684\u7528\u6237
+menu.menuaccess=\u8bbf\u95ee\u53ca\u6743\u9650
+menu.menuaccess.alt=\u7ba1\u7406\u7528\u6237\u7684\u8bbf\u95ee\u548c\u6743\u9650
+menu.menuqueries=\u9884\u8bbe\u641c\u7d22
+menu.menuqueries.alt=\u6839\u636e\u9884\u8bbe\u641c\u7d22\u6765\u7ba1\u7406\u7528\u6237
+menu.noauthentication=\u8ba4\u8bc1\u4fe1\u606f\u4e0d\u5b8c\u6574
+menu.noauthentication.alt=\u4fe1\u606f\u4e0d\u5b8c\u6574\u7684\u7528\u6237[\u65e0\u5bc6\u7801]
+menu.resourceowners=\u4f5c\u8005\u53ca\u5408\u4f5c\u8005
+menu.resourceowners.alt=\u5b66\u4e60\u8d44\u6e90\u6240\u6709\u8005\u7ba1\u7406
+menu.ucreate=\u521b\u5efa\u7528\u6237
+menu.ucreate.alt=\u521b\u5efa\u7528\u6237
+menu.usearch=\u641c\u7d22\u7528\u6237
+menu.usearch.alt=\u641c\u7d22\u7528\u6237
+menu.useradmin=\u7528\u6237\u7ba1\u7406
+menu.useradmin.alt=\u7528\u6237\u53ca\u7cfb\u7edf\u89d2\u8272\u7ba1\u7406
 menu.userdelete=\u5220\u9664\u7528\u6237
-menu.userdelete.alt=\u5220\u9664\u7528\u6237\u5E76\u53D1E-mail\u901A\u77E5\u5BF9\u65B9
-menu.userdelete.direct=\u76F4\u63A5\u5220\u9664\u7528\u6237
-menu.userdelete.direct.alt=\u5220\u9664\u7528\u6237\u800C\u4E0D\u53D1E-mail\u901A\u77E5\u5BF9\u65B9
-menu.usergroup=\u6240\u6709\u7CFB\u7EDF\u7528\u6237
-menu.usergroup.alt=\u7CFB\u7EDF\u7528\u6237\u7BA1\u7406
-menu.usermanagergroup=\u7528\u6237\u7BA1\u7406\u5458
-menu.usermanagergroup.alt=\u7528\u6237\u7BA1\u7406\u5458\u7BA1\u7406
-menu.usersimport=\u5BFC\u5165\u7528\u6237
-menu.usersimport.alt=\u4ECEExcel\u8868\u5355\u5411OpenOLAT\u5BFC\u5165\u7528\u6237
-menu.userswithoutgroup=\u65E0\u7FA4\u7EC4\u7528\u6237
-queries.intro=\u5728\u83DC\u5355<i> \u201C\u9884\u5B9A\u4E49\u641C\u7D22\u201D</i> \u4E2D\uFF0C\u4E3A\u4F60\u63D0\u4F9B\u4E86\u5E38\u7528\u7684\u641C\u7D22\u6761\u76EE\u3002\u7279\u6B8A\u7684\u641C\u7D22\u6761\u76EE\u53EF\u4EE5\u901A\u8FC7\u7528\u6237\u641C\u7D22\u5B9A\u4E49\u3002
-sysroles.intro=\u5728\u83DC\u5355<i> \u201C\u8BBF\u95EE\u548C\u6743\u9650\u201D</i> \u4E2D\uFF0C\u60A8\u53EF\u4EE5\u603B\u89C8OpenOLAT\u4E2D\u60A8\u6240\u80FD\u7BA1\u7406\u7684\u8BBF\u95EE\u53CA\u6743\u9650\u3002
+menu.userdelete.alt=\u5220\u9664\u7528\u6237\u5e76\u53d1E-mail\u901a\u77e5\u5bf9\u65b9
+menu.userdelete.direct=\u76f4\u63a5\u5220\u9664\u7528\u6237
+menu.userdelete.direct.alt=\u5220\u9664\u7528\u6237\u800c\u4e0d\u53d1E-mail\u901a\u77e5\u5bf9\u65b9
+menu.usergroup=\u6240\u6709\u7cfb\u7edf\u7528\u6237
+menu.usergroup.alt=\u7cfb\u7edf\u7528\u6237\u7ba1\u7406
+menu.usermanagergroup=\u7528\u6237\u7ba1\u7406\u5458
+menu.usermanagergroup.alt=\u7528\u6237\u7ba1\u7406\u5458\u7ba1\u7406
+menu.usersimport=\u5bfc\u5165\u7528\u6237
+menu.usersimport.alt=\u4eceExcel\u8868\u5355\u5411OpenOLAT\u5bfc\u5165\u7528\u6237
+menu.userswithoutgroup=\u65e0\u7fa4\u7ec4\u7528\u6237
+queries.intro=\u5728\u83dc\u5355<i> \u201c\u9884\u5b9a\u4e49\u641c\u7d22\u201d</i> \u4e2d\uff0c\u4e3a\u4f60\u63d0\u4f9b\u4e86\u5e38\u7528\u7684\u641c\u7d22\u6761\u76ee\u3002\u7279\u6b8a\u7684\u641c\u7d22\u6761\u76ee\u53ef\u4ee5\u901a\u8fc7\u7528\u6237\u641c\u7d22\u5b9a\u4e49\u3002
+sysroles.intro=\u5728\u83dc\u5355<i> \u201c\u8bbf\u95ee\u548c\u6743\u9650\u201d</i> \u4e2d\uff0c\u60a8\u53ef\u4ee5\u603b\u89c8OpenOLAT\u4e2d\u60a8\u6240\u80fd\u7ba1\u7406\u7684\u8bbf\u95ee\u53ca\u6743\u9650\u3002
